--- a/main.tex
+++ b/main.tex
@@ -230,6 +230,7 @@ This book introduces digital communication through probability.
 \input{ncert/markov.tex}
 \chapter{Continuous Distributions}
 \input{probability/univar.tex}
+\iffalse
 \chapter{Maximum Likelihood Detection: BPSK}
 \input{probability/ml.tex}
 \chapter{Transformation of Random Variables}
@@ -242,6 +243,7 @@ This book introduces digital communication through probability.
 \input{ncert/randomprocess.tex}
 \chapter{Error Correcting Codes}
 \input{ncert/ecc.tex}
+\fi
 
 %\include{ch02} 
 \backmatter
