--- a/ncert/dist.tex
+++ b/ncert/dist.tex
@@ -331,7 +331,8 @@ From the sample space calculate how many different amounts of money you can have
 \input{ncert/11/16/3/7a/Q11.16.3.7.tex}
 \item It is known that 10 $\%$ of certain articles manufactured are defective. What is the probability that in a random sample space of 12 such articles,9 are defective? \\
 \solution
-\input{ncert/12/13/5/13/12.13.5.13/main.tex}
+%\input{ncert/12/13/5/13/12.13.5.13/main.tex}
+\input{ncert/12/13/5/13/main.tex}
 \item A coin is tossed two times. Find the probability of getting at most one head.
 \\
 \solution
