Add existing files

--- a/main.tex
+++ b/main.tex
@@ -200,7 +200,7 @@ This book introduces digital communication through probability.
 
 \mainmatter
 
-\chapter{Introduction}
+%\chapter{Introduction}
 %\input{ncert/intro.tex}
 \chapter{Axioms}
 \section{Examples}
@@ -261,9 +261,12 @@ This book introduces digital communication through probability.
 \input{app/ident.tex}
 \chapter{Random Number Genration Using Shift Registers}
 \input{random_number/main.tex}
+\iffalse
 \chapter{NCERT}
 \input{app/ncert.tex}
+\fi
 \latexprintindex
+
 
 \end{document}
 
