--- a/main.tex
+++ b/main.tex
@@ -1,271 +1,132 @@
-%% Run LaTeX on this file several times to get Table of Contents,
-%% cross-references, and citations.
-
-\documentclass[11pt]{book}
+\documentclass[journal]{IEEEtran}
 \usepackage{gvv-book}
 \usepackage{gvv}
-%\usepackage{Wiley-AuthoringTemplate}
-\usepackage[sectionbib,authoryear]{natbib}% for name-date citation comment the below line
-%\usepackage[sectionbib,numbers]{natbib}% for numbered citation comment the above line
 
-%%********************************************************************%%
-%%       How many levels of section head would you like numbered?     %%
-%% 0= no section numbers, 1= section, 2= subsection, 3= subsubsection %%
-\setcounter{secnumdepth}{3}
-%%********************************************************************%%
-%%**********************************************************************%%
-%%     How many levels of section head would you like to appear in the  %%
-%%				Table of Contents?			%%
-%% 0= chapter, 1= section, 2= subsection, 3= subsubsection titles.	%%
-\setcounter{tocdepth}{2}
-%%**********************************************************************%%
-
-%\includeonly{ch01}
 \makeindex
 
 \begin{document}
-
-\frontmatter
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Title Pages
-%% Wiley will provide title and copyright page, but you can make
-%% your own titlepages if you'd like anyway
-%% Setting up title pages, type in the appropriate names here:
-
-\booktitle{Digital Communication}
-
-\subtitle{Through Simulations}
-
-\AuAff{G. V. V. Sharma}
+\bibliographystyle{IEEEtran}
+\onecolumn
 
 
-%% \\ will start a new line.
-%% You may add \affil{} for affiliation, ie,
-%\authors{Robert M. Groves\\
-%\affil{Universitat de les Illes Balears}
-%Floyd J. Fowler, Jr.\\
-%\affil{University of New Mexico}
-%}
+\title{
+	\begin{flushleft}
+	Random Variables\\ in High School Probability
+	\\
+\rule{0.4\columnwidth}{0.4pt}
+\end{flushleft}
+}
+\author{
+\vspace{7cm}
+	\begin{flushleft}
+\includegraphics[width=0.2\columnwidth]{figs/logo.jpg}
+\\
+		{	\huge G. V. V. Sharma}
+	\end{flushleft}
+%\IEEEpubid{\makebox[\columnwidth]{978-1-7281-5966-1/20/\$31.00 ©2020 IEEE \hfill} \hspace{\columnsep}\makebox[\columnwidth]{ }}
+}
+\maketitle
 
-%% Print Half Title and Title Page:
-%\halftitlepage
-\titlepage
+\newpage
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Copyright Page
+\section*{About this Book}
 
-\begin{copyrightpage}{2022}
-%Title, etc
-\end{copyrightpage}
+This book attempts to introduce matrices through high school coordinate geometry. All problems in the book are from NCERT mathematics textbooks from Class 9-12.   
+The content is sufficient for industry jobs.
+There is no copyright, so readers are free to print and share.  
+\begin{flushright}
+\today
+\end{flushright}
+Github: https://github.com/gadepall/ncert-probability
+		\\
+License: https://creativecommons.org/licenses/by-sa/3.0/
+\\
+and
+\\
+https://www.gnu.org/licenses/fdl-1.3.en.html
 
-% Note, you must use \ to start indented lines, ie,
-% 
-% \begin{copyrightpage}{2004}
-% Survey Methodology / Robert M. Groves . . . [et al.].
-% \       p. cm.---(Wiley series in survey methodology)
-% \    ``Wiley-Interscience."
-% \    Includes bibliographical references and index.
-% \    ISBN 0-471-48348-6 (pbk.)
-% \    1. Surveys---Methodology.  2. Social 
-% \  sciences---Research---Statistical methods.  I. Groves, Robert M.  II. %
-% Series.\\
-
-% HA31.2.S873 2004
-% 001.4'33---dc22                                             2004044064
-% \end{copyrightpage}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Only Dedication (optional) 
-
-%\dedication{To my parents}
+\newpage
 
 \tableofcontents
 
-%\listoffigures %optional
-%\listoftables  %optional
+\newpage
+\twocolumn
 
-%% or Contributor Page for edited books
-%% before \tableofcontents
 
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%  Contributors Page for Edited Book
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%\renewcommand{\theequation}{\theenumi}
+\numberwithin{equation}{enumi}
+\numberwithin{figure}{enumi}
+%\renewcommand{\thefigure}{\theenumi}
+\renewcommand{\thetable}{\theenumi}
 
-% If your book has chapters written by different authors,
-% you'll need a Contributors page.
 
-% Use \begin{contributors}...\end{contributors} and
-% then enter each author with the \name{} command, followed
-% by the affiliation information.
-
-% \begin{contributors}
-% \name{Masayki Abe,} Fujitsu Laboratories Ltd., Fujitsu Limited, Atsugi, Japan
-%
-% \name{L. A. Akers,} Center for Solid State Electronics Research, Arizona State University, Tempe, Arizona
-%
-% \name{G. H. Bernstein,} Department of Electrical and Computer Engineering, University of Notre Dame, Notre Dame, South Bend, Indiana; formerly of
-% Center for Solid State Electronics Research, Arizona
-% State University, Tempe, Arizona 
-% \end{contributors}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Optional Foreword:
-
-%\begin{foreword}
-%\lipsum[1-2]
-%\end{foreword}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Optional Preface:
-
-%\begin{preface}
-%\lipsum[1-1]
-%\prefaceauthor{}
-%\where{place\\
-% date}
-%\end{preface}
-
-% ie,
-% \begin{preface}
-% This is an example preface.
-% \prefaceauthor{R. K. Watts}
-% \where{Durham, North Carolina\\
-% September, 2004}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Optional Acknowledgments:
-
-%\acknowledgments
-%\lipsum[1-2]
-%\authorinitials{I. R. S.}  
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%% Glossary Type of Environment:
-
-% \begin{glossary}
-% \term{<term>}{<description>}
-% \end{glossary}
-
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-%\begin{acronyms}
-%\acro{ASTA}{Arrivals See Time Averages}
-%\acro{BHCA}{Busy Hour Call Attempts}
-%\acro{BR}{Bandwidth Reservation}
-%\acro{b.u.}{bandwidth unit(s)}
-%\acro{CAC}{Call / Connection Admission Control}
-%\acro{CBP}{Call Blocking Probability(-ies)}
-%\acro{CCS}{Centum Call Seconds}
-%\acro{CDTM}{Connection Dependent Threshold Model}
-%\acro{CS}{Complete Sharing}
-%\acro{DiffServ}{Differentiated Services}
-%\acro{EMLM}{Erlang Multirate Loss Model}
-%\acro{erl}{The Erlang unit of traffic-load}
-%\acro{FIFO}{First in - First out}
-%\acro{GB}{Global balance}
-%\acro{GoS}{Grade of Service}
-%\acro{ICT}{Information and Communication Technology}
-%\acro{IntServ}{Integrated Services}
-%\acro{IP}{Internet Protocol}
-%\acro{ITU-T}{International Telecommunication Unit -- Standardization sector}
-%\acro{LB}{Local balance}
-%\acro{LHS}{Left hand side}
-%\acro{LIFO}{Last in - First out}
-%\acro{MMPP}{Markov Modulated Poisson Process}
-%\acro{MPLS}{Multiple Protocol Labeling Switching}
-%\acro{MRM}{Multi-Retry Model}
-%\acro{MTM}{Multi-Threshold Model}
-%\acro{PASTA}{Poisson Arrivals See Time Averages}
-%\acro{PDF}{Probability Distribution Function}
-%\acro{pdf}{probability density function}
-%\acro{PFS}{Product Form Solution}
-%\acro{QoS}{Quality of Service}
-%\acro{r.v.}{random variable(s)}
-%\acro{RED}{random early detection}
-%\acro{RHS}{Right hand side}
-%\acro{RLA}{Reduced Load Approximation}
-%\acro{SIRO}{service in random order}
-%\acro{SRM}{Single-Retry Model}
-%\acro{STM}{Single-Threshold Model}
-%\acro{TCP}{Transport Control Protocol}
-%\acro{TH}{Threshold(s)}
-%\acro{UDP}{User Datagram Protocol}
-%\end{acronyms}
-
-\setcounter{page}{1}
-
-\begin{introduction}
-This book introduces digital communication through probability.
-
-\end{introduction}
-
-\mainmatter
-
-%\chapter{Introduction}
-%\input{ncert/intro.tex}
-\chapter{Axioms}
-\section{Examples}
+\section{Axioms}
+\subsection{Formulae}
+\input{app/axioms.tex}
+\subsection{Examples}
 \input{ncert/axioms.tex}
-\section{Exercises}
+\subsection{Conditional Probability}
 \input{exemplar/axioms.tex}
-\chapter{Random Variables}
-\section{Examples}
-\input{ncert/defs.tex}
-\section{Exercises}
-\input{exemplar/defs.tex}
-\chapter{Conditional Probability}
-\section{Examples}
-\input{ncert/cond.tex}
-\section{Exercises}
-\input{exemplar/cond.tex}
-\chapter{Discrete Distributions}
-\input{ncert/dist.tex}
-\chapter{Moments}
-\input{ncert/moment.tex}
-\chapter{Random Algebra}
-\section{Examples}
-\input{ncert/alg.tex}
-\section{Exercises}
-\input{exemplar/alg.tex}
-\chapter{Markov Chain}
-\input{ncert/markov.tex}
-\chapter{Continuous Distributions}
-\input{probability/univar.tex}
 \iffalse
-\chapter{Maximum Likelihood Detection: BPSK}
+\section{Random Variables}
+\subsection{Examples}
+\input{ncert/defs.tex}
+\subsection{Exercises}
+\input{exemplar/defs.tex}
+\section{Conditional Probability}
+\subsection{Examples}
+\input{ncert/cond.tex}
+\subsection{Exercises}
+\input{exemplar/cond.tex}
+\section{Discrete Distributions}
+\input{ncert/dist.tex}
+\section{Moments}
+\input{ncert/moment.tex}
+\section{Random Algebra}
+\subsection{Examples}
+\input{ncert/alg.tex}
+\subsection{Exercises}
+\input{exemplar/alg.tex}
+\section{Markov Chain}
+\input{ncert/markov.tex}
+\section{Continuous Distributions}
+\input{probability/univar.tex}
+%\iffalse
+\section{Maximum Likelihood Detection: BPSK}
 \input{probability/ml.tex}
-\chapter{Transformation of Random Variables}
+\section{Transformation of Random Variables}
 \input{probability/trans.tex}
-\chapter{Bivariate Random Variables: FSK}
+\section{Bivariate Random Variables: FSK}
 \input{probability/bivar.tex}
-\chapter{Exercises}
+\section{Exercises}
 \input{manual/gvv_manual_ee5837.tex}
-\chapter{Random Processes}
+\section{Random Processes}
 \input{ncert/randomprocess.tex}
-\chapter{Error Correcting Codes}
+\section{Error Correcting Codes}
 \input{ncert/ecc.tex}
-\fi
 
 %\include{ch02} 
 \backmatter
-\appendix
-\chapter{ Axioms }
-\input{app/axioms.tex}
-\chapter{ Z-transform}
-\input{app/mgf.tex}
-\chapter{Distributions}
-\input{conv-trans/main.tex}
-\chapter{Central Limit Theorem}
-\section{Binomial}
-\input{app/clt-binom.tex}
-\chapter{Identities}
-\input{app/ident.tex}
-\chapter{Random Number Genration Using Shift Registers}
-\input{random_number/main.tex}
-\iffalse
-\chapter{NCERT}
-\input{app/ncert.tex}
 \fi
+\appendix
+\iffalse
+\section{ Z-transform}
+\input{app/mgf.tex}
+\section{Distributions}
+\input{conv-trans/main.tex}
+\section{Central Limit Theorem}
+\subsection{Binomial}
+\input{app/clt-binom.tex}
+\section{Identities}
+\input{app/ident.tex}
+\section{Random Number Genration Using Shift Registers}
+\input{random_number/main.tex}
+\fi
+\iffalse
+\section{NCERT}
+\input{app/ncert.tex}
 \latexprintindex
+\fi
 
 
 \end{document}
