--- a/ncert/axioms.tex
+++ b/ncert/axioms.tex
@@ -1,8 +1,4 @@
 \begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
-	\item Why is tossing a coin considered to be a fair way of deciding which team should get the ball at the beginning of a football game?
-		\\
-\solution
-\input{ncert/10/15/1/3/main.tex}
 	\item Which of the following cannot be the probability of an event ? 
 \begin{enumerate}
 \item $\frac{2}{3}$ 
@@ -14,41 +10,41 @@
 \input{ncert/10/15/1/4/main.tex}
 \item If P(E) = 0.05, what is the probability of ‘not E’?\\
 \solution
-\input{ncert/10/5/1/5/axioms.tex}
+%\input{ncert/10/5/1/5/axioms.tex}
 \item A bag contains lemon flavoured candies only. Malini takes out one candy without looking into the bag. What is the probability that she takes out
 \begin{enumerate}
 	\item an orange flavoured candy?
 	\item a lemon flavoured candy?
 \end{enumerate}
 \solution
-\input{ncert/10/15/1/6/main.tex}
+%\input{ncert/10/15/1/6/main.tex}
 \item It is given that in a group of 3 students, the probability of 2 students not having the same birthday is 0.992. What is the probability that the 2 students have the same birthday?
 	\\
 \solution
-\input{ncert/10/15/1/7/main.tex}
+%\input{ncert/10/15/1/7/main.tex}
 \item A bag contains 3 red balls and 5 black balls. A ball is drawn at random from the bag.
 What is the probability that the ball drawn is
 \begin{enumerate}[label=(\roman*)] \item red ? \item not red? \end{enumerate}
 \solution
-\input{ncert/10/15/1/8/main.tex}
+%\input{ncert/10/15/1/8/main.tex}
 \item Gopi buys a fish from a shop for his aquarium. The shopkeeper takes out one fish at random from a tank containing 5 male fish and 8 female fish . What is the probability that the fish taken out is a male fish?
 	\\
 \solution
-\input{ncert/10/15/1/11/main.tex}
+%\input{ncert/10/15/1/11/main.tex}
 \item A box contains 12 balls, out of which $x$ are black. If one ball is drawn at random from the box, what is the probability that it will be a black ball? If 6 more black balls are put in the box, the probability of drawing a black ball is now double of what it was before. Find $x$.\\
 \solution
-\input{ncert/10/15/2/4/main.tex}
+%\input{ncert/10/15/2/4/main.tex}
 \item A letter is chosen at random from the word ‘ASSASSINATION’. Find the probability that letter is
 \begin{enumerate}
   \item  a vowel 
    \item    a consonant 
 \end{enumerate}.
 \solution
-\input{ncert/11/16/3/10/main.tex}
+%\input{ncert/11/16/3/10/main.tex}
 \item In a lottery, a person choses six different natural numbers at random from 1 to 20, and if these six numbers match with the six numbers already fixed by the lottery committee, he wins  the prize. What is the probability of winning the prizes in the game? [Hint : order of the numbers is not important.]
 	\\
 \solution
-\input{ncert/11/16/3/11/main.tex}
+%\input{ncert/11/16/3/11/main.tex}
 %
 \item Check whether the following probabilities $\pr{A}$ and $\pr{B}$ are consistently defined
 \begin{enumerate}
@@ -56,20 +52,20 @@ What is the probability that the ball drawn is
 \item $\pr{A} = 0.5,\, \pr{B} = 0.7,\, \pr{A \cup B} = 0.8$
 \end{enumerate}
 \solution
-\input{ncert/11/16/3/12/axioms.tex}
+%\input{ncert/11/16/3/12/axioms.tex}
 \item Given $\pr{A}=\frac{3}{5}$ and $\pr{B}=\frac{1}{5}$. Find $\pr{A+B}$ if $A$ and $B$ are mutually exclusive events.\\
 \solution
-\input{ncert/11/16/3/14/main.tex}
+%\input{ncert/11/16/3/14/main.tex}
 \item If $E$ and $F$ are events such that $\pr{E}=\frac{1}{4}$, $\pr{F}= \frac{1}{2}$ and $\pr{EF} =\frac{1}{8}$, find
 \begin{enumerate}
 \item $\pr{E + F}$
 \item $\pr{E^\prime F^\prime}$
 \end{enumerate}
 \solution
-\input{ncert/11/16/3/15/main.tex}
+%\input{ncert/11/16/3/15/main.tex}
 \item Events $E$ and $F$ are such that \pr{E^\prime +F^\prime} = 0.25, state whether $E$ and $F$ are mutually exclusive.\\
 \solution
-\input{ncert/11/16/3/16/main.tex}
+%\input{ncert/11/16/3/16/main.tex}
 	\item A and B are events such that $\pr A=0.42, \pr B=0.48$ and $\pr {\text{A and B}}=0.16$. \\
 Determine 
 \begin{enumerate}
@@ -78,7 +74,7 @@ Determine
 \item $\pr{\text{A or B}}$ 
 \end{enumerate}
 \solution
-\input{ncert/11/16/3/17/axioms.tex}
+%\input{ncert/11/16/3/17/axioms.tex}
 \item If A and B are two independent events with $\pr{A}=\frac{3}{5}$ and $\pr{B}=\frac{4}{9}$ then, $\pr{A^\prime B^\prime}$
 \begin{enumerate}
 \item $\frac{4}{15}$ 
@@ -87,26 +83,15 @@ Determine
 \item $\frac{2}{9}$
 \end{enumerate}
 		\solution
-		\input{exemplar/12/13/3/69/main.tex} 
-\item Let $A$ and $B$ be two  events such that $\pr{A} = \frac{3}{8}$, $\pr{B} = \frac{5}{8}$ and $\pr{A+B} = \frac{3}{4}$. Then $\pr{\left.{A}|\right.{B}}.\pr{\left.{A^\prime} |\right.{B}}$ is equal to
-\begin{enumerate}[label=(\alph*)]
-\item $\frac{2}{5}$
-\vspace{3pt}
-\item $\frac{3}{8}$
-\vspace{3pt}
-\item $\frac{3}{20}$
-\vspace{3pt}
-\item $\frac{6}{25}$
-\end{enumerate}
-\input{exemplar/12/13/3/71/main(2).tex}
+		%\input{exemplar/12/13/3/69/main.tex} 
 \item  In class XI of a school 40\% of the students study Mathematics and 30\% study Biology. 10\% of the class study both Mathematics and Biology. If a student is selected at random from the class,find the probability that he will be studying Mathematics or Biology
 	\\
 	\solution
-\input{ncert/11/16/3/18/axioms.tex}
+%\input{ncert/11/16/3/18/axioms.tex}
 \item In an entrance test that is graded on the basis of two examinations, the probability of a randomly chosen student passing the first examination is 0.8 and the probability of passing the second examination is 0.7. The probability of passing atleast one of them is 0.95. What is the probability of passing both$?$
 	\\
 	\solution
-\input{ncert/11/16/3/19/main.tex}
+%\input{ncert/11/16/3/19/main.tex}
  \item In a class of 60 students, 30 opted for NCC, 32 opted for NSS and 24 
     opted for both NCC and NSS. If one of these students is selected at random, 
     find the probability that
@@ -116,7 +101,7 @@ Determine
         \item The student has opted NSS but not NCC.
     \end{enumerate}
 	\solution
-\input{ncert/11/16/3/21/axioms.tex}
+%\input{ncert/11/16/3/21/axioms.tex}
 \item A die has two faces each with number ‘1’, three faces each with number ‘2’ and one face with number ‘3’. If die is rolled once, determine
 \begin{enumerate}
 \item $\pr{2}$
@@ -124,7 +109,7 @@ Determine
 \item $\pr{\text{not } 3}$
 \end{enumerate}
 		\solution
-\input{ncert/11/16/4/3/axioms.tex}
+%\input{ncert/11/16/4/3/axioms.tex}
 %
 \item $A$ and $B$ are two events such that \pr A = 0.54, \pr B = 0.69 and \pr {AB} = 0.35.
 %
@@ -135,20 +120,20 @@ Find \begin{enumerate}
 \item \pr {B A^\prime} 
 \end{enumerate} 
 		\solution
-\input{ncert/11/16/4/7/main.tex}
+%\input{ncert/11/16/4/7/main.tex}
 \item If $\pr{A} = \frac{3}{5}$ and $\pr{B} = \frac{1}{5}$ find $\pr{A \cap B}$ if A and B are independent events.
 	\\
 \solution
-\input{ncert/12/13/2/1/axioms.tex}
+%\input{ncert/12/13/2/1/axioms.tex}
 %
 \item A die marked 1, 2, 3 in red and 4, 5, 6 in green is tossed. Let A be the event,‘the number is even,’ and B be the event, ‘the number is red’. Are A and B independent?
 	\\
 \solution
-\input{ncert/12/13/2/5/main.tex}
+%\input{ncert/12/13/2/5/main.tex}
 \item   Let $E$ and $F$ be events with $\pr{E}=\frac{3}{5}, \pr{F}=\frac{3}{10}$ and $\pr{E F}=\frac{1}{5}$. Are $E$ and $F$ independent?
 	\\
 \solution
-\input{ncert/12/13/2/6/axioms.tex}
+%\input{ncert/12/13/2/6/axioms.tex}
 	%
 \item Given that the events A and B are such that $P(A)=\frac{1}{2}, P(A + B)=\frac{3}{5}$ and $P(B)=p$. Find $p$ if they are 
 \begin{enumerate}
@@ -156,20 +141,12 @@ Find \begin{enumerate}
 \item independent
 \end{enumerate}
 \solution
-\input{ncert/12/13/2/7/axioms.tex}
-\item Let  and B be independent events with \pr{A} = 0.3 and \pr{B} = 0.4. Find 
-\begin{enumerate}
-\item \pr{AB} \item \pr{A+B}
-
-\item \pr{A|B} \item \pr{B|A}
-\end{enumerate}
-\solution
-\input{ncert/12/13/2/8/main.tex}
+%\input{ncert/12/13/2/7/axioms.tex}
 
 \item  If A and B are two events such that $\pr{A} = \frac{1}{4}, \pr{B} = \frac{1}{2}$ and $\pr{A B} = \frac{1}{8}$, find $\pr{\text{not A and not B}}$.
 	\\
 \solution
-\input{ncert/12/13/2/9/main.tex}
+%\input{ncert/12/13/2/9/main.tex}
 \item Events A and B are such that 
 \begin{align}
     \pr{A}= \frac{1}{2},\pr{B} = \frac{7}{12} \text{and} \pr{A^{\prime}+B^{\prime}} = \frac{1}{4}.
@@ -177,7 +154,7 @@ Find \begin{enumerate}
 State whether A and B are independent. 
 	\\
 \solution
-\input{ncert/12/13/2/10/main.tex}
+%\input{ncert/12/13/2/10/main.tex}
 
 \item  A fair coin and an unbiased die are tossed. Let $A$ be the event 'head appears on the coin' and $B$ be the event '3 on the die'. Check whether $A$ and $B$ are independent events or not.
 		\label{ncert/12/13/2/4}
@@ -210,7 +187,7 @@ State whether A and B are independent.
 \item exactly one of them solves the problem
 \end{enumerate}
 \solution
-\input{ncert/12/13/2/14/main.tex}
+%\input{ncert/12/13/2/14/main.tex}
 \item One card is drawn at random from a well shuffled deck of 52 cards. In which of the following cases are the events $E$ and $F$ independent ?
 		\label{ncert/12/13/2/14}
 \begin{enumerate}
@@ -222,7 +199,7 @@ $F$ : 'the card drawn is a king’
 $F$ : 'the card drawn is a queen or jack’
 \end{enumerate}
 \solution
-\input{ncert/12/13/2/15/main.tex}
+%\input{ncert/12/13/2/15/main.tex}
 \end{enumerate}
 
 Choose the correct answer in the following exercises
@@ -243,22 +220,9 @@ Choose the correct answer in the following exercises
 \item $P(A) + P(B) = 1$
 \end{enumerate}
 \solution
-\input{ncert/12/13/2/18/main.tex}
+%\input{ncert/12/13/2/18/main.tex}
 %
 \item If $P(A)=\frac{3}{5} \text{ and } P(B)=\frac{1}{5}$, find $P(A\cap B)$ if $A$ and $B$ are independent events.
-\item Compute \pr{A|B} , if \pr{B} = 0.5 and \pr{AB} = 0.32.\\
-	\solution
-	\input{ncert/12/13/1/2/main.tex}
-	%
-\item A fair die is rolled. Consider events $E=1,3,5,\, F=2,3$ and $G=2,3,4,5$. Find
-\begin{enumerate}
-\item $\pr{E \mid F} \text{ and } \pr{F \mid E}$
-\item $\pr{E \mid G} \text{ and } \pr{G \mid E}$
-\item $\pr{{E \cup F} \mid G} \text{ and } \pr{{E \cap F} \mid G}$
-\end{enumerate}
-%
-\solution
-\input{ncert/12/13/1/11/main.tex}
 \item State which of the following are not the probability distributions of a random
 variable. Give reasons for your answer.
  \begin{enumerate}
@@ -266,40 +230,40 @@ variable. Give reasons for your answer.
 \begin{table}[h! ]
  \caption{}
 \label{tab:ncert/12/13/4/1/1}
-\input{ncert/12/13/4/1/tables/table1_1.tex}
+%\input{ncert/12/13/4/1/tables/table1_1.tex}
  \end{table}
  
  \item
 \begin{table}[h! ]
   \label{tab:ncert/12/13/4/1/2}
   \caption{}
-  \input{ncert/12/13/4/1/tables/table1_2.tex}
+  %\input{ncert/12/13/4/1/tables/table1_2.tex}
 \end{table}
 
 \item
 \begin{table}[h]
   \caption{}
   \label{tab:ncert/12/13/4/1/3}
-  \input{ncert/12/13/4/1/tables/table1_3.tex}
+  %\input{ncert/12/13/4/1/tables/table1_3.tex}
 \end{table}
 
 \item
 \begin{table}[h]
   \caption{}
   \label{tab:ncert/12/13/4/1/4}
-  \input{ncert/12/13/4/1/tables/table1_4.tex}
+  %\input{ncert/12/13/4/1/tables/table1_4.tex}
 \end{table}
 \end{enumerate}
 \solution
-\input{ncert/12/13/4/1/main.tex}
+%\input{ncert/12/13/4/1/main.tex}
 \item If a leap year is selected at random, what is the chance that it will contain 53 tuesdays?
 	\\
 		\solution
-		\input{ncert/12/13/6/8/axioms.tex}
+		%\input{ncert/12/13/6/8/axioms.tex}
 	\item Assume that the chances of a patient having a heart attack is $40\%$. It is also assumed that a meditation and yoga course reduce the risk of heart attack by $30\%$ and prescription of certain drug reduces its chances by $25\%$. At a time a patient can choose any one of the two options with equal probabilities. It is given that after going through one of the two options the patient selected at random suffers a heart attack. Find the probability that the patient followed a course of meditation and yoga?
 	\\
 		\solution
-		\input{ncert/12/13/6/13/main.tex}
+		%\input{ncert/12/13/6/13/main.tex}
 	\item An electronic assembley consists of two subsystems,say A and B.From previous testing procedures, the following probabilities are assumed to be known
 \begin{align}
 \pr{\text{A fails}}&=0.20
@@ -312,35 +276,7 @@ variable. Give reasons for your answer.
  \item $\pr{\text{A fails alone}}$
 \end{enumerate}
 		\solution
-		\input{ncert/12/13/6/15/main.tex}
-	\item If A and B are two events such that $P(A) \neq 0$ and $P\brak{B\mid A} = 1$, then
-\begin{enumerate}
-\item $A \subset B$\\
-\item $B\subset A$\\
-\item $B = \phi$\\
-\item $A = \phi$\\
-\end{enumerate}
-		\solution
-		\input{ncert/12/13/6/17/main.tex}
-	\item If \pr {A \mid B} $>$ \pr{A}, then which of the following is correct 
-\begin{enumerate}
- \item \pr{B\mid A} $<$ \pr{(B)} \\
- \item \pr{AB} $<$ \pr{A}  \pr{B}  \\
- \item \pr{B\mid A} $>$ \pr{B} \label{eq:ncert/12/13/6/18/c}\\ 
- \item \pr{B\mid A} $=$ \pr{B} \\
-\end{enumerate}
-		\solution
-		\input{ncert/12/13/6/18/main.tex}
-	\item If $A$ and $B$ are any two events such that \pr{A}+\pr{B}-\pr{AB}=\pr{A}, then choose the correct option
-\begin{enumerate}
-\item  $\pr{B|A}=1$
-\item $\pr{A|B}=1$
-	\label{prob:12/13/6/19}
-\item $\pr{B|A}=0$
-\item $\pr{A|B}=0$
-\end{enumerate}
-		\solution
-		\input{ncert/12/13/6/19/main.tex}
+		%\input{ncert/12/13/6/15/main.tex}
   \item
   In a hostel, 60\% of the students read Hindi newspaper, 40\% read English
 newspaper and 20\% read both Hindi and English newspapers. A student is
@@ -353,13 +289,7 @@ newspaper.
 newspaper.
 \end{enumerate}
 \solution
-\input{ncert/12/13/2/16/main.tex}
-%
-\item Two Coins are tossed once, where\\
-\brak{i} E : Tail appears on one coin,\qquad F : one coin shows head\\
-\brak{ii}  E : no tail appears,\qquad\qquad\qquad F : no head appears
-Determine \pr{E\mid F}.
-\input{ncert/12/13/1/7a/ncertmain.tex}
+%\input{ncert/12/13/2/16/main.tex}
 %
 \item If the probabilities for A to fail in an examination is 0.2 and that for B is 0.3, then
 the probability that either A or B fails is
@@ -370,115 +300,24 @@ the probability that either A or B fails is
 \item 0
 \end{enumerate}
 \solution
-\input{exemplar/11/16/3/27/main.tex}
+%\input{exemplar/11/16/3/27/main.tex}
 \item The probability that at least one of the two events $A$ and $B$ occurs is 0.6. If $A$ and $B$ occur simultaneously with probability 0.3, evaluate $\pr{A^\prime} + \pr{B^\prime}$.\\
 \solution
-\input{exemplar/12/13/3/3/main.tex}
-\item Three events A, B and C have probabilities $\frac{2}{5}$,$\frac{1}{3}$ and $\frac{1}{2}$ respetively.Given that $\pr{AC}=\frac{1}{5}$ and $\pr{BC}=\frac{1}{4}$,find the values of $\pr{C | B}$ and $\pr{A^{\prime} C^{\prime}}$\\
-\solution
-\input{exemplar/12/13/3/8/main.tex}
+%\input{exemplar/12/13/3/3/main.tex}
 \item Prove that
 	\begin{enumerate}
 	\item $\pr{A} = \pr{AB} + \pr{AB^\prime}$
 	\item $\pr{A+B} = \pr{AB} + \pr{AB^\prime} + \pr{A^\prime B}$
 	\end{enumerate}
-\input{exemplar/12/13/3/11/main.tex}
+%\input{exemplar/12/13/3/11/main.tex}
 \item A and B are events such that $\pr{A} = 0.4$ and $\pr{B} = 0.3$ and $\pr{A+B} = 0.5$ .Then $\pr{B^\prime A}$ is equal to\\
 \solution
-\input{exemplar/12/13/3/63/main.tex}
-\item You are given that A and B are two events such that $\pr{B}=\frac{3}{5},\pr{A|B}=\frac{1}{2}$ and $\pr{A+B}=\frac{4}{5}$,then $\pr{A}$ equals\\
-\solution
-\input{exemplar/12/13/3/64/main.tex}
-\item If $P(A)=0.4$, $P(B)=0.8$ and $P(B|A)=0.6$, then $P(A \cup B)$ is equal to
-\begin{enumerate}
-\item 0.24
-\item 0.3
-\item 0.48
-\item 0.96
-\end{enumerate}
-\solution
-\input{exemplar/12/13/3/61/main.tex}
-\item If A and B aret two events such that \pr{A} =$\frac{1}{2}$ \pr{B} =$\frac{1}{3}$, \pr{A|B}=$\frac{1}{4}$, Then \pr{A' B'} equals
-\begin{enumerate}
-	\item $\frac{1}{12}$
-	\item $\frac{3}{4}$
-	\item $\frac{1}{4}$
-	\item $\frac{3}{16}$	
-\end{enumerate}
-\solution
-\input{exemplar/12/13/3/60/main.tex}
-\item If $A$ and $B$ are such events that $\pr{A} > 0$ and $\pr{B}\neq 1$, then $\pr{A^\prime|B^\prime}$ is
-\begin{enumerate}
-\item $1-\pr{A|B}$
-\item $1-\pr{A^\prime|B}$
-\item $\frac{1-\pr{A+B}}{\pr{B^\prime}}$
-\item $\frac{\pr{A^\prime}}{\pr{B^\prime}}$
-\end{enumerate}
-\input{exemplar/12/13/3/68/main.tex}
-\item  Two events $E$ and $F$ are independent. If $\pr{E} = 0.3$, $\pr{E+F} = 0.5$, then $\pr{E|F}-\pr{F|E}$ equals
-\begin{enumerate}
-    \item[(a)] $\frac{2}{7}$
-    \item[(b)] $\frac{3}{35}$
-    \item[(c)] $\frac{1}{70}$
-    \item[(d)] $\frac{1}{7}$
-\end{enumerate}
-\solution
-\input{exemplar/12/13/3/73/main.tex}
-\item You are given that A and B are two events such that \pr{B}=$\frac{3}{5}$ \pr{A \ | \ B}=$\frac{1}{2}$ \pr{A+B}=$\frac{4}{5}$ and \pr{A}=$\frac{1}{2}$  \pr{B \ | \ A^\prime} is equal to\\
-\input{exemplar/12/13/3/65/main.tex}
-\item If $A$ and $B^\prime$ are independent events, then $\pr{A^\prime+B}=1-\pr{A}\pr{B^\prime}$.\\
-\input{exemplar/12/13/3/100/main.tex}
+%\input{exemplar/12/13/3/63/main.tex}
 \item State True or False for the statement. \\ 
 If $\pr{A}>0$ and $\pr{B}>0$. Then A and B can be mutually exclusive and independent. \\
 \solution 
-\input{exemplar/12/13/3/94/main.tex}
+%\input{exemplar/12/13/3/94/main.tex}
 \item If $A$ and $B$ are independent events, then $A'$ and $B'$ are also independent.\\
 \solution
-\input{exemplar/12/13/3/95/main.tex}
-\item If A and B are two events such that $\pr{A|B}=p,\pr{A}=p,\pr{B}=\frac{1}{3}$ and $\pr{A+B}=\frac{5}{9}$,then $p=$\\
-\solution
-\input{exemplar/12/13/3/104/main.tex}
-\item If $A$ and $B$ are two events such that $\pr{A} > 0$ and $\pr{A} + \pr{B} > 1$, then 
-\begin{align*}
-    \pr{B | A} \geq 1 - \frac{\pr{B^\prime}}{\pr{A}}
-\end{align*}
-\solution
-\input{exemplar/12/13/3/102/main.tex}
-\item If 
-\begin{align}
-\pr{B} = \frac{3}{5},
-\pr{A|B} = \frac{1}{2} \text{and}
-\pr{A + B} = \frac{4}{5}, \text{then}
-\pr{A + B}^{\prime} + \pr{A^{\prime} + B}
-\end{align}
-\solution
-\input{exemplar/12/13/3/66/main.tex}
-\item Let $A$ and $B$ be two events. If 
-\begin{align}
-\pr{A|B} = \pr{A},
-\end{align} 
-then $A$ is of $B$.\\
-\solution
-\input{exemplar/12/13/3/108/main.tex}
-\item
-
- If \pr{A|B} $>$ \pr{A}, then which of the following is correct :
-
-\begin{enumerate}[label=(\Alph*)]
-
- \item  
- \label{12.13.6.18.A}
- \pr{B|A} $<$ \pr{B}\\
- \item 
-  \label{12.13.6.18.B}
- \pr{AB} $<$ \pr{A}\pr{B}\\
- \item 
- \label{12.13.6.18.C}
- \pr{B|A} $>$ \pr{B}\\
- \item 
-  \label{12.13.6.18.D}
- \pr{B|A} = \pr{B}\\
-
- \end{enumerate}
-\input{ncert/12/13/6/18/main1.tex}
+%\input{exemplar/12/13/3/95/main.tex}
 \end{enumerate}
