--- a/ncert/axioms.tex
+++ b/ncert/axioms.tex
@@ -1,4 +1,4 @@
-\begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
+\begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
 	\item Which of the following cannot be the probability of an event ? 
 \begin{enumerate}
 \item $\frac{2}{3}$ 
@@ -10,62 +10,27 @@
 \input{ncert/10/15/1/4/main.tex}
 \item If P(E) = 0.05, what is the probability of ‘not E’?\\
 \solution
-%\input{ncert/10/5/1/5/axioms.tex}
-\item A bag contains lemon flavoured candies only. Malini takes out one candy without looking into the bag. What is the probability that she takes out
-\begin{enumerate}
-	\item an orange flavoured candy?
-	\item a lemon flavoured candy?
-\end{enumerate}
-\solution
-%\input{ncert/10/15/1/6/main.tex}
-\item It is given that in a group of 3 students, the probability of 2 students not having the same birthday is 0.992. What is the probability that the 2 students have the same birthday?
-	\\
-\solution
-%\input{ncert/10/15/1/7/main.tex}
-\item A bag contains 3 red balls and 5 black balls. A ball is drawn at random from the bag.
-What is the probability that the ball drawn is
-\begin{enumerate}[label=(\roman*)] \item red ? \item not red? \end{enumerate}
-\solution
-%\input{ncert/10/15/1/8/main.tex}
-\item Gopi buys a fish from a shop for his aquarium. The shopkeeper takes out one fish at random from a tank containing 5 male fish and 8 female fish . What is the probability that the fish taken out is a male fish?
-	\\
-\solution
-%\input{ncert/10/15/1/11/main.tex}
-\item A box contains 12 balls, out of which $x$ are black. If one ball is drawn at random from the box, what is the probability that it will be a black ball? If 6 more black balls are put in the box, the probability of drawing a black ball is now double of what it was before. Find $x$.\\
-\solution
-%\input{ncert/10/15/2/4/main.tex}
-\item A letter is chosen at random from the word ‘ASSASSINATION’. Find the probability that letter is
-\begin{enumerate}
-  \item  a vowel 
-   \item    a consonant 
-\end{enumerate}.
-\solution
-%\input{ncert/11/16/3/10/main.tex}
-\item In a lottery, a person choses six different natural numbers at random from 1 to 20, and if these six numbers match with the six numbers already fixed by the lottery committee, he wins  the prize. What is the probability of winning the prizes in the game? [Hint : order of the numbers is not important.]
-	\\
-\solution
-%\input{ncert/11/16/3/11/main.tex}
-%
+\input{ncert/10/5/1/5/axioms.tex}
 \item Check whether the following probabilities $\pr{A}$ and $\pr{B}$ are consistently defined
 \begin{enumerate}
 \item $\pr{A} = 0.5,\, \pr{B} = 0.7,\, \pr{A \cap B} = 0.6$
 \item $\pr{A} = 0.5,\, \pr{B} = 0.7,\, \pr{A \cup B} = 0.8$
 \end{enumerate}
 \solution
-%\input{ncert/11/16/3/12/axioms.tex}
+\input{ncert/11/16/3/12/axioms.tex}
 \item Given $\pr{A}=\frac{3}{5}$ and $\pr{B}=\frac{1}{5}$. Find $\pr{A+B}$ if $A$ and $B$ are mutually exclusive events.\\
 \solution
-%\input{ncert/11/16/3/14/main.tex}
+\input{ncert/11/16/3/14/main.tex}
 \item If $E$ and $F$ are events such that $\pr{E}=\frac{1}{4}$, $\pr{F}= \frac{1}{2}$ and $\pr{EF} =\frac{1}{8}$, find
 \begin{enumerate}
 \item $\pr{E + F}$
 \item $\pr{E^\prime F^\prime}$
 \end{enumerate}
 \solution
-%\input{ncert/11/16/3/15/main.tex}
+\input{ncert/11/16/3/15/main.tex}
 \item Events $E$ and $F$ are such that \pr{E^\prime +F^\prime} = 0.25, state whether $E$ and $F$ are mutually exclusive.\\
 \solution
-%\input{ncert/11/16/3/16/main.tex}
+\input{ncert/11/16/3/16/main.tex}
 	\item A and B are events such that $\pr A=0.42, \pr B=0.48$ and $\pr {\text{A and B}}=0.16$. \\
 Determine 
 \begin{enumerate}
@@ -74,7 +39,7 @@ Determine
 \item $\pr{\text{A or B}}$ 
 \end{enumerate}
 \solution
-%\input{ncert/11/16/3/17/axioms.tex}
+\input{ncert/11/16/3/17/axioms.tex}
 \item If A and B are two independent events with $\pr{A}=\frac{3}{5}$ and $\pr{B}=\frac{4}{9}$ then, $\pr{A^\prime B^\prime}$
 \begin{enumerate}
 \item $\frac{4}{15}$ 
@@ -320,4 +285,13 @@ If $\pr{A}>0$ and $\pr{B}>0$. Then A and B can be mutually exclusive and indepen
 \item If $A$ and $B$ are independent events, then $A'$ and $B'$ are also independent.\\
 \solution
 %\input{exemplar/12/13/3/95/main.tex}
+\item It is given that in a group of 3 students, the probability of 2 students not having the same birthday is 0.992. What is the probability that the 2 students have the same birthday?
+	\\
+\solution
+\input{ncert/10/15/1/7/main.tex}
+\item In a lottery, a person choses six different natural numbers at random from 1 to 20, and if these six numbers match with the six numbers already fixed by the lottery committee, he wins  the prize. What is the probability of winning the prizes in the game? [Hint : order of the numbers is not important.]
+	\\
+\solution
+\input{ncert/11/16/3/11/main.tex}
+%
 \end{enumerate}
