--- a/ncert/cond.tex
+++ b/ncert/cond.tex
@@ -1,8 +1,8 @@
-\begin{enumerate}[label=\thechapter.\arabic*,ref=\thechapter.\theenumi]
+\begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
 	\item 
 Given that E and F are events such that $P(E)=0.6, P(F)=0.3$ and $P(E F)=0.2$, find $P(E \mid F)$ and $P(F \mid E)$.
 \\
-\input{ncert/12/13/1/1/cond.tex}
+%\input{ncert/12/13/1/1/cond.tex}
 	\item Compute $\pr{A|B}$, if $\pr{B}=0.5$ and $\pr{AB}=0.32$. 
 		\\
 	\item Probability that A speaks truth is
@@ -16,7 +16,7 @@ appears. The probability that actually there was head is
 \end{enumerate}
 	\item Compute $\pr{A|B}$, if $\pr{B}=0.5$ and $\pr{AB}=0.32$. 
 		\\
-		\input{ncert/12/13/1/2/cond.tex}
+		%\input{ncert/12/13/1/2/cond.tex}
 
 	\item If $\pr{A}$ = 0.8, $\pr{B} = 0.5$ and $\pr{B \vert A = 0.4}$, find  
 \begin{enumerate}
@@ -28,7 +28,7 @@ $\pr{AB}$
  $\pr{A+B}$
 \end{enumerate}
 \solution
-%\input{ncert/12/13/1/3/axioms.tex}
+%%\input{ncert/12/13/1/3/axioms.tex}
 \iffalse
 	\item If $\pr{A}=\frac{6}{11}$, $\pr{B}=\frac{5}{11}$ and $\pr{A+B}=\frac{7}{11}$, find
 \begin{enumerate}
@@ -37,12 +37,12 @@ $\pr{AB}$
 	\item $\pr{B \mid A}$
 \end{enumerate}
 \solution
-		\input{ncert/12/13/1/5/axioms.tex}
+		%\input{ncert/12/13/1/5/axioms.tex}
 \fi
 \item Mother, Father and Son line up at random for a family picture. Determine \pr{E \mid F} where 
 $E$: Son on one end, $F$: Father in middle\\
 \solution
-		\input{ncert/12/13/1/9/cond.tex}
+		%\input{ncert/12/13/1/9/cond.tex}
 	\item Assume that each born child is equally likely to be a boy or a girl. If a family has
 two children, what is the conditional probability that both are girls given that
 \begin{enumerate}
@@ -50,7 +50,7 @@ two children, what is the conditional probability that both are girls given that
 	\item  At least one is a girl
 \end{enumerate}
 \solution
-		\input{ncert/12/13/1/12/main.tex}
+		%\input{ncert/12/13/1/12/main.tex}
 	\item An instructor has a question bank consisting of 300 easy True / False questions,
 200 difficult True / False questions, 500 easy multiple choice questions and 400
 difficult multiple choice questions. If a question is selected at random from the
@@ -58,7 +58,7 @@ question bank, what is the probability that it will be an easy question given th
 is a multiple choice question?
 \\
 \solution
-		\input{ncert/12/13/1/13/main.tex}
+		%\input{ncert/12/13/1/13/main.tex}
 \item If $ \pr{A}  = \frac{1}{2}$, $\pr{B} = 0$, then $\pr{A \mid B}$ is
 \begin{enumerate}
 \item 0
@@ -66,7 +66,7 @@ is a multiple choice question?
 \item not defined
 \item 1
 \end{enumerate}
-	\input{ncert/12/13/1/16/cond.tex}
+	%\input{ncert/12/13/1/16/cond.tex}
  \item If $A$ and $B$ are events such that 
     \begin{align}
         \pr{A|B} = \pr{B|A}
@@ -80,18 +80,18 @@ is a multiple choice question?
         \item $\pr{A} = \pr{B}$
     \end{enumerate}
     \solution
-\input{ncert/12/13/1/17/axioms.tex}
+%\input{ncert/12/13/1/17/axioms.tex}
  \item Consider the experiment of throwing a die, if a multiple of 3 comes up, 
     throw the die again and if any other number comes, toss a coin. Find the 
     conditional probability of the event `the coin shows a tail', given that `at 
     least one die shows a 3'.
 \\
 \solution
-\input{ncert/12/13/1/15/cond.tex}
+%\input{ncert/12/13/1/15/cond.tex}
 %
 \item Two cards are drawn at random and without replacement from a pack of 52 playing cards. Find the probability that both the cards are black.\\
 \solution
-\input{ncert/12/13/2/2/cond.tex}
+%\input{ncert/12/13/2/2/cond.tex}
 %
 \item Let $A$ and $B$ be independent events with $P(A)=0.3$ and $P(B)=0.4$. Find
 		\label{ncert/12/13/2/7}
@@ -109,7 +109,7 @@ the second ball is red?
 		\label{ncert/12/13/3/1}
 \\
 \solution
-\input{ncert/12/13/3/1/cond.tex}
+%\input{ncert/12/13/3/1/cond.tex}
 \item A bag contains 4 red and 4 black balls, another bag contains 2 red and 6 black
 balls. One of the two bags is selected at random and a ball is drawn from the bag
 which is found to be red. Find the probability that the ball is drawn from the
@@ -124,7 +124,7 @@ student is a hostlier?
 		\label{ncert/12/13/3/3}
 \\
 \solution
-\input{ncert/12/13/3/3/main.tex}
+%\input{ncert/12/13/3/3/main.tex}
 \item In answering a question on a multiple choice test, a student either knows the
 answer or guesses. Let
 $\frac{3}{4}$ be the probability that he knows the answer and
@@ -134,7 +134,7 @@ answer will be correct with probability
 $\frac{1}{4}$. What is the probability that the student knows the answer given that he answered it correctly?
 \\
 \solution
-\input{ncert/12/13/3/4/cond.tex}
+%\input{ncert/12/13/3/4/cond.tex}
 \item A laboratory blood test is 99\% effective in detecting a certain disease when it is
 in fact, present. However, the test also yields a false positive result for 0.5\% of
 the healthy person tested (i.e. if a healthy person is tested, then, with probability
@@ -143,14 +143,14 @@ actually has the disease, what is the probability that a person has the disease
 given that his test result is positive ?
 \\
 \solution
-\input{ncert/12/13/3/5/main.tex}
+%\input{ncert/12/13/3/5/main.tex}
 \item There are three coins. One is a two headed coin (having head on both faces),
 another is a biased coin that comes up heads 75\% of the time and third is an
 unbiased coin. One of the three coins is chosen at random and tossed, it shows
 heads, what is the probability that it was the two headed coin ?
 \\
 \solution
-\input{ncert/12/13/3/6/cond.tex}
+%\input{ncert/12/13/3/6/cond.tex}
 
 \item An insurance company insured 2000 scooter drivers, 4000 car drivers and 6000
 truck drivers. The probability of an accidents are 0.01, 0.03 and 0.15 respectively.
@@ -171,7 +171,7 @@ second group wins. Find the probability that the new product introduced was by
 the second group.
 \\
 \solution
-\input{ncert/12/13/3/9/cond.tex}
+%\input{ncert/12/13/3/9/cond.tex}
 \item Suppose a girl throws a die. If she gets a 5 or 6, she tosses a coin three times and
 notes the number of heads. If she gets 1, 2, 3 or 4, she tosses a coin once and
 notes whether a head or tail is obtained. If she obtained exactly one head, what
@@ -194,7 +194,7 @@ appears. The probability that actually there was head is
 \item $\frac{2}{5}$
 \end{enumerate}
 \solution
-\input{ncert/12/13/3/13/cond.tex}
+%\input{ncert/12/13/3/13/cond.tex}
 \item 
 		If $A$ and $B$ are two events such that $A \subset B$ and $\pr{B} \neq 0$, then which of the following is correct ?
 \begin{enumerate}
@@ -204,14 +204,14 @@ appears. The probability that actually there was head is
 \item None of these
 \end{enumerate}
 \solution
-\input{ncert/12/13/3/14/axioms.tex}
+%\input{ncert/12/13/3/14/axioms.tex}
 \item $A$ and $B$ are two events such that $\pr{A} \neq 0$. Find $\pr{B \mid A}$, if
 \begin{enumerate}
 \item $A$ is a subset of $B$
 \item $A \cap B = \phi$
 \end{enumerate}
 \solution 
-	\input{ncert/12/13/6/1/cond.tex}
+	%\input{ncert/12/13/6/1/cond.tex}
 	%
 \item A couple has two children.
 \begin{enumerate}
@@ -219,52 +219,52 @@ appears. The probability that actually there was head is
 \item Find the probability that both children are females, if it is known that the elder child is a female.
 \end{enumerate}
 \solution 
-	\input{ncert/12/13/6/2/cond.tex}
+	%\input{ncert/12/13/6/2/cond.tex}
 	\item Suppose that $5\%$ of men and $0.25\%$ of women have grey hair. A grey haired person is selected at random. What is the probability that this person being male? Assume that there are equal number of males and females.
 \\
 \solution
-		\input{ncert/12/13/6/3/main.tex}
+		%\input{ncert/12/13/6/3/main.tex}
 \item Suppose we have four boxes A,B,C and D containing coloured marbles as given in \tabref{tab:12/13/6/12/table1}. 
 \begin{table}[htbp]
 \centering
-\input{ncert/12/13/6/12/tables/question_table.tex}
+%\input{ncert/12/13/6/12/tables/question_table.tex}
 \caption{Question Table}
 \label{tab:12/13/6/12/table1}
 \end{table}
 One of the boxes has been selected at random and a single marble is drawn from it.$\,$If the marble is red,$\,$what is the probability that it was drawn from \\1) Box A ?\\2) Box B ?\\3) Box C ?
 \\
 \solution 
-	\input{ncert/12/13/6/12/main.tex}
+	%\input{ncert/12/13/6/12/main.tex}
 \item Bag I contains 3 red and 4 black balls and Bag II contains 4 red and 5 black balls.
 One ball is transferred from Bag I to Bag II and then a ball is drawn from Bag II.
 The ball so drawn is found to be red in colour. Find the probability that the
 transferred ball is black. 
 \\
 \solution
-		\input{ncert/12/13/6/16/main.tex}
+		%\input{ncert/12/13/6/16/main.tex}
 \item Box A contains 25 slips of which 19 are marked Rs 1 and others are marked Rs 5 each. Box B contains 50 slips of which 45 are marked Rs 1 and others are marked Rs 13 each. Slips of both boxes are poured into a third box and reshuffled. A slip is drawn at random. What is the probability that it is marked other than Rs 1?\\
 \solution
-\input{exemplar/10/13/3/35/main.tex}
+%\input{exemplar/10/13/3/35/main.tex}
 \item Bag I contains 3 black and 2 white balls, Bag II contains 2 black and 4 white
 balls. A bag and a ball is selected at random. Determine the probability of selecting
 a black ball.\\
 \solution
-\input{exemplar/12/13/3/17/main.tex}
+%\input{exemplar/12/13/3/17/main.tex}
 \item While shuffling a pack of 52 playing cards, 2 cards are dropped. Find the probabilty that the missing cards to be of different colours.\\
 \solution
-\input{exemplar/11/16/3/20/main.tex}
+%\input{exemplar/11/16/3/20/main.tex}
 \item A bag contains $(2n + 1)$ coins. It is known that n of these coins have a head on
 both sides where as the rest of the coins are fair. A coin is picked up at random
 from the bag and is tossed. If the probability that the toss results in a head is $\frac{31}{42}$
 , determine the value of $n$.\\
 \solution
-\input{exemplar/12/13/3/52/main.tex}
+%\input{exemplar/12/13/3/52/main.tex}
 \item An urn contains $m$ white and $n$ black balls. A ball is drawn at random and is put
 back into the urn along with $k$ additional balls of the same colour as that of the
 ball drawn. A ball is again drawn at random. Show that the probability of
 drawing a white ball now does not depend on $k$.\\
 \solution
-\input{exemplar/12/13/3/40/main.tex}
+%\input{exemplar/12/13/3/40/main.tex}
 \item If $\pr{AB}=\frac{7}{10}$ and $\pr{B}=\frac{17}{20}$, then $\pr{A|B}$ equals
 \begin{enumerate}
 \item $\frac{14}{17}$
@@ -272,18 +272,18 @@ drawing a white ball now does not depend on $k$.\\
 \item $\frac{7}{8}$
 \item $\frac{1}{8}$
 \end{enumerate}
-\input{exemplar/12/13/3/57/main.tex}
+%\input{exemplar/12/13/3/57/main.tex}
 \item 
 A letter is known to have come either from TATANAGAR or from CALCUTTA. On the envelope, just two consecutive letter TA are visible. What is the probability that the letter came from TATANAGAR.\\
 \solution
-\input{exemplar/12/13/3/44/main.tex}
+%\input{exemplar/12/13/3/44/main.tex}
 \item A bag contain (2n+1) coins. It is known that n of these coins have a head on both sides where as the rest of the coins are fair. A coin is picked up at random from the bag and is tossed. If the probability that the toss results in a head is $\frac{31}{42}$, determine the value of n.
-\input{exemplar/12/13/3/52a/main.tex}
+%\input{exemplar/12/13/3/52a/main.tex}
 \item By examining the chest X ray, the probability that TB is detected when a person
 is actually suffering is 0.99. The probability of an healthy person diagnosed to 
 have TB is 0.001. In a certain city, 1 in 1000 people suffers from TB. A person
 is selected at random and is diagnosed to have TB. What is the probability that
 he actually has TB? \\
-\input{exemplar/12/13/3/47/main.tex}
+%\input{exemplar/12/13/3/47/main.tex}
 \end{enumerate}
 
