--- a/ncert/defs.tex
+++ b/ncert/defs.tex
@@ -10,7 +10,7 @@
 
 \end{enumerate}
 \solution
-		\input{ncert/10/15/1/14/main.tex}
+		%\input{ncert/10/15/1/14/main.tex}
 	\item Five cards—the ten, jack, queen, king and ace of diamonds, are well-shuffled with their face downwards. One card is then picked up at random.
 \begin{enumerate}
 \item
@@ -19,11 +19,11 @@ What is the probability that the card is the queen?
 If the queen is drawn and put aside, what is the probability that the second card picked up is (a) an ace? (b) a queen?\\
 \end{enumerate}
 \solution
-		\input{ncert/10/15/1/15/defs.tex}
+		%\input{ncert/10/15/1/15/defs.tex}
 	\item A bag contains $5$ red balls and some blue balls. If the probability of drawing a blue ball is double that if a red ball, determine the number of blue balls in the bag. 
 		\\
 \solution
-		\input{ncert/10/15/2/3/defs.tex}
+		%\input{ncert/10/15/2/3/defs.tex}
 	\item A card is selected from a pack of 52 cards.
  \begin{enumerate}[label=(\alph*)] 
                  \item How many points are there in the sample space?
@@ -31,15 +31,15 @@ If the queen is drawn and put aside, what is the probability that the second car
                  \item Calculate the probability that the card is (i) an ace and (ii) black card.
  \end{enumerate}
 \solution
-		\input{ncert/11/16/3/4/main.tex}
+		%\input{ncert/11/16/3/4/main.tex}
 \item Four cards are drawn from a well-shuffled deck of 52 cards. What is the probability of obtaining 3 diamonds and one spade.
 \\
 \solution
-		\input{ncert/11/16/4/2/defs.tex}
+		%\input{ncert/11/16/4/2/defs.tex}
 \item In a certain lottery 10,000 tickets are sold and ten equal prizes are awarded. What is the probability of not getting a prize if you buy (a) one ticket (b) two tickets (c) 10 tickets ?	
 \\
 \solution
-		\input{ncert/11/16/4/4/defs.tex}
+		%\input{ncert/11/16/4/4/defs.tex}
 		%
 \item 
 Out of 100 students, two sections of 40 and 60 are formed. If you and your friend are among the 100 students, what is the probability that
@@ -48,18 +48,18 @@ Out of 100 students, two sections of 40 and 60 are formed. If you and your frien
 \item you both enter the different sections?
 \end{enumerate}
 \solution
-		\input{ncert/11/16/4/5/defs.tex}
+		%\input{ncert/11/16/4/5/defs.tex}
 	\item 
 The number lock of a suitcase has 4 wheels each labelled with ten digits i.e. from 0 to 9.The lock opens with a sequence of four digits with no repeats.What is the probability of a person getting the right sequence to open the suitcase.
 \\
 \solution
-		\input{ncert/11/16/4/10/defs.tex}
+		%\input{ncert/11/16/4/10/defs.tex}
 		%
 \item 
 Two cards are drawn at random and without replacement from a pack of 52 playing cards. Find the probability that both the cards are black.
 \\
 \solution
-		\input{ncert/12/13/2/2/defs.tex}
+		%\input{ncert/12/13/2/2/defs.tex}
 		\item A box of oranges is inspected by examining three randomly selected oranges drawn without replacement. If all the three oranges are good, the box is approved for sale, otherwise, it is rejected. Find the probability that a box containing 15 oranges out of which 12 are good and 3 are bad ones will be approved for sale.
 		\label{ncert/12/13/2/3/defs.tex}
 		\item Two balls are drawn at random with replacement from a box containing 10 black and 8 red balls. Find the probability that
@@ -88,11 +88,11 @@ Two cards are drawn at random and without replacement from a pack of 52 playing 
     \item $\frac{1}{36}$ 
 \end{enumerate}
 \solution
-		\input{ncert/12/13/2/17/defs.tex}
+		%\input{ncert/12/13/2/17/defs.tex}
 	\item A bag contains 4 red and 4 black balls, another bag contains 2 red and 6 black balls. One of the two bags is selected at random and a ball is drawn from the bag which is found to be red. Find the probability that the ball is drawn from the first bag.
 \\
 \solution
-		\input{ncert/12/13/3/2/main.tex}
+		%\input{ncert/12/13/3/2/main.tex}
   \item
   Cards with numbers 2 to 101 are placed in a box. A card is selected at random.Find the probability that the card has
 \begin{enumerate}[label=(\roman*)]
@@ -100,7 +100,7 @@ Two cards are drawn at random and without replacement from a pack of 52 playing 
 	\item a square number
 \end{enumerate}
 \solution
-\input{exemplar/10/13/3/32/main.tex}
+%\input{exemplar/10/13/3/32/main.tex}
 \item
 The king, queen and jack of clubs are removed from a deck of 52 playing cards and then well shuffled. Now one card is drawn at random from the remaining cards.  Determine the probability that the card is
 \begin{enumerate}[label=(\roman*)]
@@ -108,7 +108,7 @@ The king, queen and jack of clubs are removed from a deck of 52 playing cards an
 \item 10 of hearts
 \end{enumerate}
 \solution
-\input{exemplar/10/13/3/29/main.tex}
+%\input{exemplar/10/13/3/29/main.tex}
 \item A team of medical students doing their internship have to assist during surgeries
 at a city hospital. The probabilities of surgeries rated as very complex, complex,
 routine, simple or very simple are respectively, 0.15, 0.20, 0.31, 0.26, .08. Find
@@ -120,7 +120,7 @@ the probabilities that a particular surgery will be rated
 	\item routine or simple
 \end{enumerate}
 \solution
-\input{exemplar/11/16/3/8(1)/main.tex}
+%\input{exemplar/11/16/3/8(1)/main.tex}
 \item A card is selected from a pack of 52 cards.
 \begin{enumerate}[label=(\alph*)]
     \item How many points are there in the sample space?
@@ -128,11 +128,11 @@ the probabilities that a particular surgery will be rated
     \item Calculate the probability that the card is (i) an ace and (ii) black card.
 \end{enumerate}
 \solution
-\input{exemplar/11/16/3/4/main2.tex}
+%\input{exemplar/11/16/3/4/main2.tex}
 \item The probability that a non leap year selected at random will contain 53 sundays.
 \\
 \solution
-\input{exemplar/10/13/1/19/main.tex}
+%\input{exemplar/10/13/1/19/main.tex}
 \item One of the four persons John, Rita, Aslam or Gurpreet will be promoted next
 month. Consequently the sample space consists of four elementary outcomes
 S = {John promoted, Rita promoted, Aslam promoted, Gurpreet promoted}
@@ -150,36 +150,36 @@ four times that of John.
 	\item If A = {John promoted or Gurpreet promoted}, find P (A).
 \end{enumerate}
 \solution
-\input{exemplar/11/16/3/10/main.tex}
+%\input{exemplar/11/16/3/10/main.tex}
 \item A card is drawn from a deck of 52 cards. Find the probability of getting a king or a heart or a red card.\\
 \solution
-\input{exemplar/11/16/3/15/main.tex}
+%\input{exemplar/11/16/3/15/main.tex}
 \item The probability that a student will pass his examination is 0.73, the probability of
 the student getting a compartment is 0.13, and the probability that the student will
 either pass or get compartment is 0.96. State True or False.\\
 \solution
-\input{exemplar/11/16/3/31/main.tex}
+%\input{exemplar/11/16/3/31/main.tex}
 \item A card is selected from a pack of 52 cards\\
 \begin{enumerate}[label=(\alph*)]
 \item How many points are there in the sample space?
 \item Calculate the probability that the cards is an ace of spades.
 \item Calculate the probability that the card is (i) an ace (ii)black card.\\
 \end{enumerate}
-\input{ncert/11/16/3/4_1/Prob_4.tex}
+%\input{ncert/11/16/3/4_1/Prob_4.tex}
 \item In a non-leap year, the probability of having 53 tuesdays or 53 wednesdays is\\
 \solution
-\input{exemplar/11/16/3/18/main.tex}
+%\input{exemplar/11/16/3/18/main.tex}
 \item There are 1000 sealed envelopes in a box, 10 of them contain a cash prize of
 Rs 100 each, 100 of them contain a cash prize of Rs 50 each and 200 of them
 contain a cash prize of Rs 10 each and rest do not contain any cash prize. If they
 are well shuffled and an envelope is picked up out, what is the probability that it
 contains no cash prize?\\
 \solution
-\input{exemplar/10/13/3/34/main.tex}
+%\input{exemplar/10/13/3/34/main.tex}
 \item 
 A die is thrown and a card is selected at random from a deck of 52 playing cards. The probability of getting an even number on the die and a spade card.\\
 \solution
-\input{exemplar/12/13/3/78/main.tex}
+%\input{exemplar/12/13/3/78/main.tex}
 \item
 If 4-digit numbers greater than 5,000 are randomly formed from the digits 0, 1, 3, 5, and 7, what is the probability of forming a number divisible by 5 when:
 \begin{enumerate}
@@ -187,7 +187,7 @@ If 4-digit numbers greater than 5,000 are randomly formed from the digits 0, 1, 
     \item The repetition of digits is not allowed?
 \end{enumerate}
 \solution
-\input{ncert/11/16/4/9/main.tex}
+%\input{ncert/11/16/4/9/main.tex}
 \item Consider the probability space $\brak{\Omega, \mathcal{G}, P}$ where $\Omega = [0,2]$ and $\mathcal{G} = \cbrak{\phi, \Omega, [0,1], (1,2]}$. Let $X$ and $Y$ be two functions on $\Omega$ defined as
 \begin{align*}
     X(\omega) = 
@@ -212,5 +212,5 @@ Then which one of the following statements is true?
     \item [(D)] Both $X$ and $Y$ are random variables with respect to $\mathcal{G}$.
 \end{enumerate} \hfill (GATE ST 2023)\\
 \solution
-\input{gate/ST/2023/14/main.tex}
+%\input{gate/ST/2023/14/main.tex}
 \end{enumerate}
