--- a/main.tex
+++ b/main.tex
@@ -1,4 +1,4 @@
-\documentclass[journal]{IEEEtran}
+\documentclass[journal,a5paper]{IEEEtran}
 \usepackage{gvv-book}
 \usepackage{gvv}
 
@@ -67,7 +67,6 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{ncert/axioms.tex}
 \subsection{Conditional Probability}
 \input{exemplar/axioms.tex}
-\iffalse
 \section{Random Variables}
 \subsection{Examples}
 \input{ncert/defs.tex}
@@ -78,8 +77,13 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \input{ncert/cond.tex}
 \subsection{Exercises}
 \input{exemplar/cond.tex}
-\section{Discrete Distributions}
+%\section{Discrete Distributions}
+\section{Bernoulli}
+\input{ncert/bernoulli.tex}
 \input{ncert/dist.tex}
+    \section{Miscellaneous}
+\input{ncert/misc.tex}
+\iffalse
 \section{Moments}
 \input{ncert/moment.tex}
 \section{Random Algebra}
