--- a/ncert/11/16/3/12/axioms.tex
+++ b/ncert/11/16/3/12/axioms.tex
@@ -1,185 +1,24 @@
-\iffalse
-\documentclass[journal,12pt,twocolumn]{IEEEtran}
-\usepackage{romannum}
-\usepackage{float}
-\usepackage{setspace}
-\usepackage{gensymb}
-\singlespacing
-\usepackage[cmex10]{amsmath}
-\usepackage{amsthm}
-\usepackage{mathrsfs}
-\usepackage{txfonts}
-\usepackage{stfloats}
-\usepackage{bm}
-\usepackage{cite}
-\usepackage{cases}
-\usepackage{subfig}
-\usepackage{longtable}
-\usepackage{multirow}
-\usepackage{enumitem}
-\usepackage{mathtools}
-\usepackage{steinmetz}
-\usepackage{tikz}
-\usepackage{circuitikz}
-\usepackage{verbatim}
-\usepackage{tfrupee}
-\usepackage[breaklinks=true]{hyperref}
-\usepackage{tkz-euclide}
-\usetikzlibrary{calc,math}
-\usepackage{listings}
-    \usepackage{color}                                            %%
-    \usepackage{array}                                            %%
-    \usepackage{longtable}                                        %%
-    \usepackage{calc}                                             %%
-    \usepackage{multirow}                                         %%
-    \usepackage{hhline}                                           %%
-    \usepackage{ifthen}                                           %%
-  %optionally (for landscape tables embedded in another document): %%
-    \usepackage{lscape}     
-\usepackage{multicol}
-\usepackage{chngcntr}
-\DeclareMathOperator*{\Res}{Res}
-\renewcommand\thesection{\arabic{section}}
-\renewcommand\thesubsection{\thesection.\arabic{subsection}}
-\renewcommand\thesubsubsection{\thesubsection.\arabic{subsubsection}}
-
-\renewcommand\thesectiondis{\arabic{section}}
-\renewcommand\thesubsectiondis{\thesectiondis.\arabic{subsection}}
-\renewcommand\thesubsubsectiondis{\thesubsectiondis.\arabic{subsubsection}}
-
-% correct bad hyphenation here
-\hyphenation{op-tical net-works semi-conduc-tor}
-\def\inputGnumericTable{}                                 %%
-
-\lstset{
-frame=single, 
-breaklines=true,
-columns=fullflexible
-}
-
-\begin{document}
-
-
-\newtheorem{theorem}{Theorem}[section]
-\newtheorem{problem}{Problem}
-\newtheorem{proposition}{Proposition}[section]
-\newtheorem{lemma}{Lemma}[section]
-\newtheorem{corollary}[theorem]{Corollary}
-\newtheorem{example}{Example}[section]
-\newtheorem{definition}[problem]{Definition}
-\newcommand{\BEQA}{\begin{eqnarray}}
-\newcommand{\EEQA}{\end{eqnarray}}
-\newcommand{\define}{\stackrel{\triangle}{=}}
-
-\bibliographystyle{IEEEtran}
-\providecommand{\mbf}{\mathbf}
-\providecommand{\pr}[1]{\ensuremath{\Pr\left(#1\right)}}
-\providecommand{\qfunc}[1]{\ensuremath{Q\left(#1\right)}}
-\providecommand{\sbrak}[1]{\ensuremath{{}\left[#1\right]}}
-\providecommand{\lsbrak}[1]{\ensuremath{{}\left[#1\right.}}
-\providecommand{\rsbrak}[1]{\ensuremath{{}\left.#1\right]}}
-\providecommand{\brak}[1]{\ensuremath{\left(#1\right)}}
-\providecommand{\lbrak}[1]{\ensuremath{\left(#1\right.}}
-\providecommand{\rbrak}[1]{\ensuremath{\left.#1\right)}}
-\providecommand{\cbrak}[1]{\ensuremath{\left\{#1\right\}}}
-\providecommand{\lcbrak}[1]{\ensuremath{\left\{#1\right.}}
-\providecommand{\rcbrak}[1]{\ensuremath{\left.#1\right\}}}
-\theoremstyle{remark}
-\newtheorem{rem}{Remark}
-\newcommand{\sgn}{\mathop{\mathrm{sgn}}}
-\providecommand{\abs}[1]{\left\vert#1\right\vert}
-\providecommand{\res}[1]{\Res\displaylimits_{#1}} 
-\providecommand{\norm}[1]{\left\lVert#1\right\rVert}
-\providecommand{\mtx}[1]{\mathbf{#1}}
-\providecommand{\mean}[1]{E\left[ #1 \right]}
-\providecommand{\fourier}{\overset{\mathcal{F}}{ \rightleftharpoons}}
-\providecommand{\system}{\overset{\mathcal{H}}{ \longleftrightarrow}}
-\newcommand{\solution}{\noindent \textbf{Solution: }}
-\newcommand{\cosec}{\,\text{cosec}\,}
-\providecommand{\dec}[2]{\ensuremath{\overset{#1}{\underset{#2}{\gtrless}}}}
-\newcommand{\myvec}[1]{\ensuremath{\begin{pmatrix}#1\end{pmatrix}}}
-\newcommand{\mydet}[1]{\ensuremath{\begin{vmatrix}#1\end{vmatrix}}}
-\numberwithin{equation}{subsection}
-\makeatletter
-\@addtoreset{figure}{problem}
-\makeatother
-
-\let\StandardTheFigure\thefigure
-\let\vec\mathbf
-\renewcommand{\thefigure}{\theproblem}
-
-
-
-\def\putbox#1#2#3{\makebox[0in][l]{\makebox[#1][l]{}\raisebox{\baselineskip}[0in][0in]{\raisebox{#2}[0in][0in]{#3}}}}
-     \def\rightbox#1{\makebox[0in][r]{#1}}
-     \def\centbox#1{\makebox[0in]{#1}}
-     \def\topbox#1{\raisebox{-\baselineskip}[0in][0in]{#1}}
-     \def\midbox#1{\raisebox{-0.5\baselineskip}[0in][0in]{#1}}
-
-\vspace{3cm}
-
-
-\title{Assignment 1}
-\author{Jaswanth Chowdary Madala}
-
-
-
-
-
-% make the title area
-\maketitle
-
-\newpage
-
-%\tableofcontents
-
-\bigskip
-
-\renewcommand{\thefigure}{\theenumi}
-\renewcommand{\thetable}{\theenumi}
-
-
-
 \begin{enumerate}
-\textbf{Solution:} 
-\fi
-		To check whether the given probabilities are consistently defined, we check whether the following property holds correctly with the probability axioms
+\item 
 \begin{align}
-\pr{A+B}= \pr{A}+ \pr{B} - \pr{AB} \label{eq:ncert/11/16/3/12/1}
-\end{align}
-\begin{enumerate}
-\item Given that 
-\begin{align}
-\pr{A} = 0.5,\,
-\pr{B} = 0.7,\,
+\pr{A} < 
 \pr{AB} = 0.6
 \end{align}
-From \eqref{eq:ncert/11/16/3/12/1}, 
-\begin{align}
-\pr{A+B} = 0.5+ 0.7 - 0.6 
-= 0.6 \label{eq:ncert/11/16/3/12/2}
-\end{align}
-From \eqref{eq:ncert/11/16/3/12/2} we have
-\begin{align}
-0 \leq \pr{A+B} \leq 1
-\end{align}
-Hence the given probabilities are consistently defined.
+which violates
+	\eqref{eq:axiom-prod-ge}.  Inconsistent.
 \item Given that 
 \begin{align}
 \pr{A} = 0.5,\,
 \pr{B} = 0.7,\,
 \pr{A+B} = 0.8
 \end{align}
-From \eqref{eq:ncert/11/16/3/12/1} we get, 
+From \eqref{eq:axiom_sum_AB}, we get, 
 \begin{align}
 \pr{AB} = 0.5+ 0.7 - 0.8 \\
 = 0.4 \label{eq:ncert/11/16/3/12/3}
 \end{align}
-From \eqref{eq:ncert/11/16/3/12/3} we have
-\begin{align}
-0 \leq \pr{AB} \leq 1
-\end{align}
-Hence the given probabilities are consistently defined
+$\because$ no axioms are violated, 
+the given probabilities are consistently defined
 \end{enumerate}
 
 
