--- a/ncert/11/16/3/17/axioms.tex
+++ b/ncert/11/16/3/17/axioms.tex
@@ -1,23 +1,21 @@
 \solution
 \begin{enumerate}
-\item $\pr{\text{not A}}$
+\item 
 \begin{align}
-\pr{A^{\prime}} &= 1 - \pr A \\
-&= 1 - 0.42 \\
-&= 0.58 
+\pr{A^{\prime}} = 1 - \pr A 
+= 0.58 
 \end{align}
-
-\item $\pr{\text{not B}}$
+%
+\item 
 \begin{align}
-\pr{B^{\prime}} &= 1 - \pr B \\
-&= 1 - 0.48 \\
-&= 0.52
+\pr{B^{\prime}} = 1 - \pr B 
+= 0.52
 \end{align}
-
-\item $\pr{\text{A or B}}$
+%
+\item 
 \begin{align}
-\pr{\text{A+B}} &= \pr A + \pr B - \pr {AB} \\
-&= 0.42 + 0.48 - 0.16 \\
-&= 0.74
+\pr{\text{A+B}}  
+= 0.42 + 0.48 - 0.16 
+= 0.74
 \end{align}
 \end{enumerate}
