--- a/ncert/dist.tex
+++ b/ncert/dist.tex
@@ -1,84 +1,3 @@
-\section{Bernoulli}
-\begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
-	\item A lot consists of 144 ball pens of which 20 are defective and the 
-    others are good. Nuri will buy a pen if it is good, but will not buy if it 
-    is defective. The shopkeeper draws one pen at random and gives it to her. 
-    What is the probability that
-    \begin{enumerate}
-        \item She will buy it?
-        \item She will not buy it?
-    \end{enumerate}
-\solution
-\input{ncert/10/5/1/21/bernoulli.tex}
-\item A school has five houses A, B, C, D and E. A class has 23 students, 4 from house
-A, 8 from house B, 5 from house C, 2 from house D and rest from house E. A
-single student is selected at random to be the class monitor. The probability that the
-selected student is not from A, B and C is \\
-\solution
-\input{exemplar/10/13/1/26/10.13.1.26.tex}
-\item A bag contains slips numbered from 1 to 100. If Fatima chooses a slip at random
-from the bag, it will either be an odd number or an even number. Since this situation
-has only two possible outcomes, so, the probability of each is $\frac{1}{2}$.Justify.\\
-\solution
-\input{exemplar/10/13/2/14/prob.tex}
-\item A letter of English alphabets is chosen at random. Determine the probability that the letter is a consonant.\\
-    \solution
-    \input{exemplar/10/13/3/33/main.tex}
-\item A carton of 24 bulbs contain 6 defective bulbs. One bulbs is drawn at random.
-What is the probability that the bulb is not defective? If the bulb selected is defective
-and it is not replaced and a second bulb is selected at random from the rest, what
-is the probability that the second bulb is defective?\\
-\solution
-\input{exemplar/10/13/3/36/main.tex}
-\item An integer is chosen between 0 and 100. What is the probability that it is 
-	\begin{enumerate}
- 		\item divisible by 7
-   		\item not divisible by 7
-     	\end{enumerate}
-\solution
-\input{exemplar/10/13/3/31/main.tex}
-\item In an examination, 20 questions of true-false type are asked. Suppose a student tosses a fair coin to determine his answer to each question. If the coin falls heads, he answer true; if it falls tails, he answer false. Find the probability that he answers at least 12 questions correctly.\\
-\\
-\solution
-\input{ncert/12/13/5/7/main.tex}
-\item If the letters of the word \textbf{ALGORITHM} are arranged at random in a row what
-is the probability the letters GOR must remain together as a unit?\\
-\solution
-\input{exemplar/11/16/3/1/main.tex}
-\item Six new employees, two of whom are married to each other, are to be assigned six desks that
-are lined up in a row. If the assignment of employees to desks is made randomly, what is the
-probability that the married couple will have nonadjacent desks?\\
-\solution
-\input{exemplar/11/16/3/2/main.tex}
-\item There are four men and six women on the city council.
-If one council member is selected for a committee at random,how likely is it that it is a woman?\\
-\solution
-\input{exemplar/11/16/3/6/11.16.3.6.tex}
-\item A girl calculates that the probability of her winning the first prize in a lottery is 0.08. If 6000 tickets are sold,how many tickets has she bought?\\
-(A) 40  (B)240  (C)480  (D)750 
-\input{exemplar/10/13/1/23/ncert.tex}
-\item Three numbers are chosen from 1 to 20. Find the probability that they are not consecutive
-\begin{enumerate}
-	\item $\frac{186}{190}$\\
-	\item $\frac{187}{190}$\\
-	\item $\frac{188}{190}$\\
-	\item $\frac{18}{\comb{20}{3}}$ 
-\end{enumerate}
-\solution
-\input{exemplar/11/16/3/19/main.tex}
-\item Seven persons are to be seated in a row. What is the probabiity that two particular persons sit next to each other?\\
-\solution
-\input{exemplar/11/16/3/21/main.tex}
-\item A single letter is selected at random from the word ‘PROBABILITY’. The
-probability that it is a vowel is
-\input{exemplar/11/16/3/26/main2.tex}
-\item The probability of getting a bad egg in a lot of 400 is 0.035. The number of bad eggs in the lot is\\
-\solution
-\input{exemplar/10/13/1/22/main.tex}
-\item someone is asked to take a number from 1 to 100.The probability that it is a prime number is\\
-\solution
-\input{ncert/10/13/1/25/ncert.tex}
-    \end{enumerate}
     \section{Multinomial}
 \begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
 \item A box contains 5 red marbles, 8 white marbles and 4 green marbles.One marble is taken
@@ -91,7 +10,7 @@ out of the box at random. What is the probability that the marble taken out will
     \item  not green?
 \end{enumerate}
 \solution
-\input{ncert/10/15/1/9/multinom.tex}
+%\input{ncert/10/15/1/9/multinom.tex}
 \item A box contains 3 orange balls, 3 green balls and 2 blue balls. Three balls are drawn at random from the box without replacement. The probability of drawing 2 green balls and one blue ball is
 \begin{enumerate}
 \item $\frac{3}{28}$\\
@@ -99,7 +18,7 @@ out of the box at random. What is the probability that the marble taken out will
 \item $\frac{1}{28}$\\
 \item $\frac{167}{168}$
 \end{enumerate}
-\input{exemplar/12/13/3/79/main.tex}
+%\input{exemplar/12/13/3/79/main.tex}
 \item A game of chance consists of spinning an arrow
 which comes to rest pointing at one of the numbers
 1, 2, 3, 4, 5, 6, 7, 8 (see \figref{fig:ncert/10/15/1/12/my_label}), and these are equally
@@ -122,7 +41,7 @@ a number less than 9?
     \label{fig:ncert/10/15/1/12/my_label}
 \end{figure}
 \solution
-\input{ncert/10/15/1/12/uniform.tex}
+%\input{ncert/10/15/1/12/uniform.tex}
 \item A box contains 10 red marbles, 20 blue marbles and 30 green marbles. 5 marbles
 are drawn from the box, what is the probability that
 \begin{enumerate}
@@ -130,13 +49,13 @@ are drawn from the box, what is the probability that
 \item atleast one will be green?
 \end{enumerate}
 \solution
-\input{ncert/11/16/4/1/multinom.tex}
+%\input{ncert/11/16/4/1/multinom.tex}
 \item A box of oranges is inspected by examining three randomly selected oranges drawn without replacement. If all the three oranges are good, the box is approved for sale, otherwise, it is rejected. Find the probability that a box containing 15 oranges out of which 12 are good and 3 are bad ones will be approved for sale.\\
 	\solution
-\input{ncert/12/13/2/3/multinom.tex}
-\item \input{exemplar/12/13/3/74/main.tex}
+%\input{ncert/12/13/2/3/multinom.tex}
+\item %\input{exemplar/12/13/3/74/main.tex}
 \item A bag contains 5 red and 3 blue balls. If 3 balls are drawn at random without replacement the probability that exactly two of the three balls were red, the first ball being red is\\
-\input{exemplar/12/13/3/75/main.tex}
+%\input{exemplar/12/13/3/75/main.tex}
     \end{enumerate}
     \section{Uniform}
 \begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
@@ -149,17 +68,17 @@ are drawn from the box, what is the probability that
 \item A number less than 6 will appear
 \end{enumerate}
 \solution
-\input{ncert/11/16/3/3/bernoulli.tex}
+%\input{ncert/11/16/3/3/bernoulli.tex}
 \item All the jacks, queens and kings are removed from a deck of 52 playing cards. The remaining cards are well shuffled and then one card is drawn at random. Giving ace a value 1 similar value for other cards, find the probability that the card has a value 
 \begin{enumerate}
 	\item 7
 	\item greater than 7
 	\item less than 7
 \end{enumerate}
-\input{exemplar/10/13/3/30/main.tex}
+%\input{exemplar/10/13/3/30/main.tex}
 \item Two dice are numbered 1,2,3,4,5,6 and 1,1,2,2,3,3 respectively. They are thrown and the sum of then numbers on them is noted. Find the probability of getting each sum from 2 to 9 seperately
 \solution
-\input{exemplar/10/13/3/23/main.tex}
+%\input{exemplar/10/13/3/23/main.tex}
     \end{enumerate}
 
 	\section{Binomial}
@@ -170,7 +89,7 @@ are drawn from the box, what is the probability that
 	\item 5 will come up at least once?
 \end{enumerate}
 \solution
-\input{ncert/10/15/1/24/binom.tex}
+%\input{ncert/10/15/1/24/binom.tex}
   \item Three coins are tossed once. Find the probability of getting 
     \begin{enumerate}
         \item 3 heads
@@ -184,7 +103,7 @@ are drawn from the box, what is the probability that
         \item atmost two tails
     \end{enumerate}
 \solution
-\input{ncert/11/16/3/8/binom.tex}
+%\input{ncert/11/16/3/8/binom.tex}
 \item In a game, the entry fee is Rs 5.The game consists of a tossing a coin 3 times.If one or two heads show, Sweta gets her entry fee back.If she throws 3 heads, she receives double the entry fees.Otherwise she will lose. For tossing a coin three times, find the probability that she 
 \begin{enumerate}
 	\item loses the entry fee.
@@ -194,12 +113,12 @@ are drawn from the box, what is the probability that
 	\item just gets her entry fee.
 \end{enumerate}
 \solution
-\input{exemplar/10/13/3/38/binom.tex}
+%\input{exemplar/10/13/3/38/binom.tex}
 	\item 
 	A game consists of tossing a one rupee coin 3 times and noting its outcome each time. Hanif wins if all the tosses give the same result i.e., three heads or three tails, and loses otherwise. Calculate the probability that Hanif will lose the game
 \\
-\input{ncert/10/15/1/23/main.tex}
-%\input{ncert/12/13/1/1/cond.tex}
+%\input{ncert/10/15/1/23/main.tex}
+%%\input{ncert/12/13/1/1/cond.tex}
 \item A coin is tossed three times, where. Determine \pr{E \mid F} where
 \begin{enumerate}
 \item $E$ : head on third toss, $F$ : heads on first two tosses
@@ -207,12 +126,12 @@ are drawn from the box, what is the probability that
 \item $E$ : at most two tails, $F$ : at least one tail
 \end{enumerate}
 \solution 
-\input{ncert/12/13/1/6/cond.tex}
+%\input{ncert/12/13/1/6/cond.tex}
 \item A die is tossed thrice. Find the probability of getting an odd number at least once.
 %		\label{ncert/12/13/2/12}
 		\\
 	\solution
-\input{ncert/12/13/2/12/binom.tex}
+%\input{ncert/12/13/2/12/binom.tex}
 \item Find the probability distribution of
 \begin{enumerate}
 	\item number of heads in two tosses of a coin.
@@ -220,7 +139,7 @@ are drawn from the box, what is the probability that
 	\item number of heads in four tosses of a coin.
 \end{enumerate}
 \solution
-\input{ncert/12/13/4/4/dist.tex}
+%\input{ncert/12/13/4/4/dist.tex}
 \item Find the probability distribution of the number of successes in two tosses of a die,
 where a success is defined as\\
 \begin{enumerate}
@@ -228,11 +147,11 @@ where a success is defined as\\
 \item six appears on at least one die
 \end{enumerate}
 \solution
-\input{ncert/12/13/4/5/binom.tex}
+%\input{ncert/12/13/4/5/binom.tex}
 \item There are 5\% defective items in a large bulk of items. What is the probability that a sample of 10 items will include not more than one defective item?
 	\\
 \solution
-\input{ncert/12/13/5/3/main.tex}
+%\input{ncert/12/13/5/3/main.tex}
 \item Five cards are drawn successively with replacement from a well-shuffled deck
 of 52 cards. What is the probability that
 \begin{enumerate}
@@ -241,7 +160,7 @@ of 52 cards. What is the probability that
     \item none is a spade?
 \end{enumerate}
 \solution
-\input{ncert/12/13/5/4/binom.tex}
+%\input{ncert/12/13/5/4/binom.tex}
 \item The probability that a bulb produced by a factory will fuse after 150 days of use
 is $0.05$. Find the probability that out of 5 such bulbs
 \begin{enumerate}
@@ -253,33 +172,33 @@ is $0.05$. Find the probability that out of 5 such bulbs
 will fuse after 150 days of use.
 \\
 \solution
-\input{ncert/12/13/5/5/binom.tex}
+%\input{ncert/12/13/5/5/binom.tex}
 \item A bag consists of 10 balls each marked with one of the digits 0 to 9. If 4 balls are drawn successively with replacement from the bag, what is the probability that none is marked with the digit 0?
 \\
 \solution
-\input{ncert/12/13/5/6/main.tex}
+%\input{ncert/12/13/5/6/main.tex}
 \item How many times must a man toss a fair coin so that the probability of having at least one head is more than 90\%?
 \\
-\input{ncert/12/13/6/10/binom.tex}
+%\input{ncert/12/13/6/10/binom.tex}
 \item In an examination, 20 questions of true-false type are asked. Suppose a student tosses a fair coin to determine his answer to each question. If the coin falls heads, he answer true; if it falls tails, he answer false. Find the probability that he answers at least 12 questions correctly.\\
 \\
 \solution
-\input{ncert/12/13/5/7/binom.tex}
+%\input{ncert/12/13/5/7/binom.tex}
 \item Find the probability of getting 5 twice in 7 throws of a dice.\\
 \\
 \solution
-\input{ncert/12/13/5/11/binom.tex}
+%\input{ncert/12/13/5/11/binom.tex}
 \item On a multiple choice examination with three possible answers for each of the five questions, what is the probability that a candidate would get four or more correct answers just by guessing$?$
 \\
 \solution
-\input{ncert/12/13/5/9/binom.tex}
+%\input{ncert/12/13/5/9/binom.tex}
 \item Find the probability of throwing at most 2 sixes in 6 throws of a single die.\\
 \solution
-\input{ncert/12/13/5/12/binom.tex}
+%\input{ncert/12/13/5/12/binom.tex}
 \item Suppose that 90 \% of people are right-handed. What is the probability that atmost 6 of a random sample of 10 people are right-handed. 
 \\
 \solution
-\input{ncert/12/13/6/4/main.tex}
+%\input{ncert/12/13/6/4/main.tex}
   \item An urn contains 25 balls of which 10 balls bear a mark `X' and the 
     remaining 15 bear a mark `Y'. A ball is drawn at random from the urn, its 
     mark is noted down and it is replaced. If 6 balls are drawn in this way, 
@@ -291,7 +210,7 @@ will fuse after 150 days of use.
         \item the number of balls with `X' mark and `Y' mark will be equal.
     \end{enumerate}
 \solution
-\input{ncert/12/13/6/5/binom.tex}
+%\input{ncert/12/13/6/5/binom.tex}
 
 \item An urn contains 5 red and 2 black balls. Two balls are randomly drawn. Let X
 represent the number of black balls. What are the possible values of X? Is X a
@@ -317,40 +236,40 @@ tossed twice, find the probability distribution of number of tails.
 \item A coin is tossed twice, what is the probability that atleast one tail occurs?
 \\
 \solution
-\input{ncert/11/16/3/2/binom.tex}
+%\input{ncert/11/16/3/2/binom.tex}
 \item From a lot of 30 bulbs which include 6 defectives, a sample of 4 bulbs is drawn
 at random with replacement. Find the probability distribution of the number of
 defective bulbs.
  \item Suppose $X$ is a binomial distribution $B\left(6,\frac{1}{2}\right)$. Show that $X=3$ is the most likely outcome.
 (Hint : $P(X=3)$ is the maximum among all $P(x_i),x_i=0,1,2,3,4,5,6$)
-\input{ncert/12/13/5/8/main.tex}
+%\input{ncert/12/13/5/8/main.tex}
 \item A fair coin is tossed four times, and a person win Re $1$ for each head and lose Rs $1.5$ for each tail that turns up.\\
 From the sample space calculate how many different amounts of money you can have after four tosses and the probability of having each of these amounts.
 \\
 \solution
-\input{ncert/11/16/3/7a/Q11.16.3.7.tex}
+%\input{ncert/11/16/3/7a/Q11.16.3.7.tex}
 \item It is known that 10 $\%$ of certain articles manufactured are defective. What is the probability that in a random sample space of 12 such articles,9 are defective? \\
 \solution
-%\input{ncert/12/13/5/13/12.13.5.13/main.tex}
-\input{ncert/12/13/5/13/main.tex}
+%%\input{ncert/12/13/5/13/12.13.5.13/main.tex}
+%\input{ncert/12/13/5/13/main.tex}
 \item A coin is tossed two times. Find the probability of getting at most one head.
 \\
 \solution
-\input{exemplar/10/13/3/24/ncertq2.tex}
+%\input{exemplar/10/13/3/24/ncertq2.tex}
 \item An experiment succeeds twice as often as it fails. Find the probability that in the next
 six trials, there will be atleast 4 successes.
 \solution
-\input{ncert/12/13/6/9/main.tex}
+%\input{ncert/12/13/6/9/main.tex}
 \item A die is thrown 5 times. Find the probability that an odd number will come up exactly three times.
 		\solution
-	\input{exemplar/12/13/3/20/main.tex}
+	%\input{exemplar/12/13/3/20/main.tex}
 \item A coin is tossed 3 times. List the possible outcomes. Find the probability of getting
 (i) all heads (ii) at least 2 heads \\
 \solution
-\input{exemplar/10/13/3/25/main.tex}
+%\input{exemplar/10/13/3/25/main.tex}
 \item Ten coins are tossed. What is the probability of getting atleast 8 heads?
 \\
-\input{exemplar/12/13/3/21/main.tex}
+%\input{exemplar/12/13/3/21/main.tex}
 \item A factory produces bulbs. The probability that any one bulb is defective is $\frac{1}{50}$ and they are packed in boxes of 10. From a single box, find the probability that
 \begin{enumerate}
 \item none of the bulb is defective 
@@ -358,23 +277,23 @@ six trials, there will be atleast 4 successes.
 \item more than 8 bulbs are working properly
 \end{enumerate}
 \solution
-\input{exemplar/12/13/3/31/main.tex}
+%\input{exemplar/12/13/3/31/main.tex}
 \item A lot of 100 watches is known to have 10 defective watches. If 8 watches are
 selected (one by one with replacement) at random, what is the probability that
 there will be at least one defective watch?
-\\ \input{exemplar/12/13/3/23/main.tex}
+\\ %\input{exemplar/12/13/3/23/main.tex}
 \item The Probability of a man hitting  target is 0.25.He shoots 7 times. What is the probability of his hitting atleast twice?\\
-\input{exemplar/12/13/3/22/exem.tex}
+%\input{exemplar/12/13/3/22/exem.tex}
 \item Explain why the experiment of tossing a coin three times is said to have binomial distribution
 \\ \solution 
-\\ \input{exemplar/12/13/3/6/main.tex}
+\\ %\input{exemplar/12/13/3/6/main.tex}
 \item A person buys a lottery ticket in 50 lotteries in each of which his chance of winning a prize is $\frac{1}{100}$. What is the probability that he will win a prize
 \begin{enumerate}[label=(\alph*)]
  \item  atleast once 
  \item exactly once 
  \item atleast twice ?
 \end{enumerate}
-\input{ncert/12/13/5/10/main.tex}
+%\input{ncert/12/13/5/10/main.tex}
 \item The probability that a person is not a swimmer is 0.3. The probability that out of
 5 persons 4 are swimmers is
 \begin{enumerate}
@@ -384,7 +303,7 @@ there will be at least one defective watch?
 \item $\brak{0.7}^4\brak{0.3}$
 \end{enumerate}
 \solution
-\input{exemplar/12/13/3/86/main.tex}
+%\input{exemplar/12/13/3/86/main.tex}
 \item Suppose a random variable $X$ follows binomial distribution with parameters n and p, where $0 < p < 1 $. If \pr{X=r}/\pr{X=n-r} is independent of n and r, then p equals,
 \begin{enumerate}
 	\item $\frac{1}{2}$
@@ -394,20 +313,20 @@ there will be at least one defective watch?
 \end{enumerate}
 \solution
 \\
-\input{exemplar/12/13/3/90/main.tex}
+%\input{exemplar/12/13/3/90/main.tex}
 \item The probability of guessing correctly at least 8 out of 10 answers on a true-false
 type examination is\\
 \solution
-\input{exemplar/12/13/3/85/main.tex}
+%\input{exemplar/12/13/3/85/main.tex}
 \item In a family having three children, there may be no girl, one girl, two girls, or three girls. So the probability of each is 1/4. Is this correct? Justify your answer.\\
-\input{exemplar/10/13/2/5/main.tex}
+%\input{exemplar/10/13/2/5/main.tex}
 \item Two cards are drawn from a well shuffled deck of 52 playing cards with
 replacement. The probability, that both cards are queens, is
 \begin{enumerate}[label =\Alph*]
 \item $\frac{1}{13} \times \frac{1}{13}$  \item $\frac{1}{13} + \frac{1}{13}$  \item $\frac{1}{13} \times \frac{1}{17}$  \item $\frac{1}{13} \times \frac{4}{51}$
 \end{enumerate}
 \solution
-\input{exemplar/12/13/3/84/main.tex}
+%\input{exemplar/12/13/3/84/main.tex}
 \item Eight coins are tossed together. The probability of getting exactly 3 heads is\\
 \begin{enumerate}
 \item 
@@ -419,13 +338,13 @@ $\frac{5}{32}$\\
 \item 
 $\frac{3}{32}$\\
 \end{enumerate}
-\input{exemplar/12/13/3/81/prob6.tex}
+%\input{exemplar/12/13/3/81/prob6.tex}
 \item If $X$ follows binomial distribution with parameters $n = 5$, $p$ and 
 \begin{align}
 p_X(2) = 9p_X(3)
 \end{align}
 then $p$ is ?
-\input{exemplar/12/13/3/106/main.tex} 
+%\input{exemplar/12/13/3/106/main.tex} 
 \item A box has $100$ pens of which $10$ are defective. What is the probability that out of a sample of $5$ pens drawn one by one with replacement at most one is defective?
 \begin{enumerate}[label=(\alph*)]
 \item $\brak{\frac{9}{10}}^5$
@@ -433,171 +352,18 @@ then $p$ is ?
 \item $\frac{1}{2}\brak{\frac{9}{10}}^5$
 \item $\frac{1}{2}\brak{\frac{9}{10}}^4 + \brak{\frac{9}{10}}^5$
 \end{enumerate}
-\input{exemplar/12/13/3/93/main.tex}
+%\input{exemplar/12/13/3/93/main.tex}
 \item If X follows a binomial distribution with parameters n = 5, p and $p_X(2) = 9p_X(3)$ then p is?\\
-\input{ncert/9/3/32/main.tex}
+%\input{ncert/9/3/32/main.tex}
 \item A die is thrown again and again until three sixes are obtained. Find the probability of obtaining third six on sixth throw of a die.
 	\\
 \solution
-\input{ncert/12/13/6/7/main.tex}
+%\input{ncert/12/13/6/7/main.tex}
 \item A fair coin is tossed four times and a person win Re 1 for each head and lose Re 1.5 for each tail that turns up.from the sample space calculate how many different amounts of money you can have after four tosses and the probability of having each of these amounts.\\
-\input{ncert/9/3/20/main.tex}
+%\input{ncert/9/3/20/main.tex}
 \end{enumerate}
     \section{Triangular}
 \begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
 	\item Two dice, one blue and one grey, are thrown at the same time.   The event defined by the sum of the two numbers appearing on the top of the dice can have 11 possible outcomes 2, 3, 4, 5, 6, 6, 8, 9, 10, 11 and 12.  A student argues that each of these outcomes has a probability $\frac{1}{11}$.  Do you agree with this argument?  Justify your answer.
 		%
     \end{enumerate}
-    \section{Miscellaneous}
-\begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
-\item  The random variable $X$ has a probability distribution \pr{X} of the following form, where $k$ is some number 
-\begin{align}
-  \pr{X} =
-    \begin{cases}
-      k,  & x=0\\
-      2k, & x=1\\
-      3k, & x=2\\
-      0 , & \text{otherwise}
-    \end{cases}       
-\end{align}
-		\begin{enumerate}
-			\item
- Determine the value of $k$ 
-
-\item  Find \pr{X < 2},\pr{X \leq 2},\pr{X \geq 2}  
-		\end{enumerate}
-\solution
-\input{ncert/12/13/4/9/dist.tex}
-\item State which of the following are not the probability distributions of a random 
-variable. Give reasons for your answer
-\renewcommand{\labelenumii}{\roman{enumii}}
-\begin{enumerate}
-
-\item \begin{table}[ht!]\centering
-\input{ncert/13/4/tables/Book.tex}
-\end{table}
-
-\item \begin{table}[ht!]\centering
-\input{ncert/13/4/tables/Book2.tex}
-\end{table}
-
-\item  \begin{table}[ht!]\centering
-\input{ncert/13/4/tables/Book3.tex}	
-\end{table}
-
-\item  \begin{table}[ht!]\centering
-\input{ncert/13/4/tables/Book5.tex}	
-\end{table} 
-
-
-\end{enumerate}
-\item A random variable X has the following probability distribution\\
-
-Determine
-
-\begin{enumerate}
-\begin{table}[ht!]\centering
-\input{ncert/13/4/tables/Book10.tex}
-\end{table}
-\item k
-\item P$(X < 3)$
-\item P$(X > 6)$
-\item P$(0 < X < 3)$
-
-\end{enumerate}
-
-\item The random variable X has a probability distribution P(X) of the following form,
-where k is some number :
-\[P(x)=\begin{cases}
-k, & \mbox{if}\; x= 0\\
-2k, & \mbox{if}\; x= 1\\
-3k, & \mbox{if}\; x= 2\\
-0, & otherwise
-\end{cases}\]
-\begin{enumerate}
-\item Determine the value of k.
-\item Find P $(X < 2)$, P $(X \leq 2)$, P$(X \geq 2)$
-\end{enumerate}
-\item
-A game consists of spinning an arrow which comes to rest pointing at one of the regions (1, 2 or 3) (Fig. 13.1). Are the outcomes 1, 2 and 3 equally likely to occur? Give reasons.\\
-\begin{figure}[!ht]
-	\begin{center}
-		
-		\resizebox{\columnwidth}{!}{\input{exemplar/10/13/2/6/figs/circle.tex}}
-	\end{center}
-	\caption{Fig.13.1}
-	\label{fig:circle.tex}	
-\end{figure}\\
-\solution
-\input{exemplar/10/13/2/6/main.tex}
-\item Apoorv throws two dice once and computes the product of the numbers appearing on the dice. Peehu throws one die and squares the number that appears on it. Who has the better chance of getting the number 36? Why?\\
-\solution
-\input{exemplar/10/13/2/7/ncert.tex}
-\item 6 boys and 6 girls sit in a row at random. The probability that all the girls sit
-together is
-\begin{enumerate}
-	\item $\frac{1}{432}$
-	\item $\frac{12}{431}$
-	\item $\frac{1}{132}$
-	\item none of the above 
-\end{enumerate}
-			\input{exemplar/11/16/3/25/main.tex}
-\item A card is selected from a deck of 52 cards. The probability of its being a red face card is
-\input{exemplar/10/13/1/18/main.tex}
-\item A die is loaded in such a way that each odd number is twice as likely to occur as each even number. Find P(G), where G is the event that a number greater than 3 occurs on a single roll of the die.\\
-\input{exemplar/11/16/3/5_1/main.tex}
-
-\item Determine the probability $p$,for each of following events.
-\begin{enumerate}
-\item An odd number appears in a single roll of dice.
-\item Atleast one head appears in two tosses of fair coin.
-\item A king,9 of hearts or 3 of spades appears in drawing a single card from a well shuffled deck of 52 cards.
-\item The sum of 6 appears in single toss of a pair of fair dice.
-\end{enumerate}
-\input{exemplar/11/16/3/17/ncert.tex}
-\item Determine the probability p, for each of the following events.\\
-(a) An odd number appears in a single toss of a fair die.\\
-(b) At least one head appears in two tosses of a fair coin.\\
-(c) A king, 9 of hearts, or 3 of spades appears in drawing a single card from a
-well shuffled ordinary deck of 52 cards.\\
-(d) The sum of 6 appears in a single toss of a pair of fair dice.
-\input{exemplar/11/16/3/17/main.tex}
-\item The probability distribution of a random variable X is given below:
-\begin{table}[h]
-    \centering
-    \begin{tabular}{|c|c|c|c|c|}
-        \hline
-        X & 0 & 1 & 2 & 3 \\
-        \hline
-        $P(X)$ & $k$ & $\frac{k}{2}$ & $\frac{k}{4}$ & $\frac{k}{8}$ \\
-        \hline
-    \end{tabular}
-\end{table}
-\begin{enumerate}
-    \item Determine the value of $k$.
-    \item Determine $P(X \le 2)$ and $P(X > 2)$.
-    \item Find $P(X \le 2)$ + $P(X > 2)$.
-\end{enumerate}
-\solution
-\input{exemplar/12/13/3/25/main.tex}
-\item \input{exemplar/10/13/1/24/main.tex}
-\item Three persons, A, B and C, fire at a target in turn, starting with A. Their probability of hitting the target are 0.4, 0.3 and 0.2 respectively. The probability of two hits is\\
-\begin{enumerate}
-\item 0.024
-\item 0.188
-\item 0.336
-\item 0.452
-\end{enumerate}
-\solution \\
-\input {exemplar/12/13/3/76/main.tex}
-item If two events are independent, then
-\begin{enumerate}
-\item they must be mutually exclusive
-\item the sum of their probabilities must be equal to 1
-\item (A) and (B) both are correct
-\item None of the above is correct
-\end{enumerate}
-\input {exemplar/12/13/3/70/main2.tex}
-\item Three letters are dictated to three persons and an envelope is addressed to each of them, the letters are inserted into the envelopes at random so that each envelope contains exactly one letter. Find the probability that at least one letter in its proper envelope.\\
-\input {ncert/11/16/4/6/main.tex}
-\end{enumerate}
