Add existing files

--- a/app/axioms.tex
+++ b/app/axioms.tex
@@ -26,7 +26,7 @@ A^{\prime}B^{\prime} &=  \brak{A+B}^{\prime}
 	\pr{1} =1	
 	\label{eq:axiom-one}
 \end{align}
-\item If $AB = 0$,
+\item If $AB = 0$, i.e. $A, B$, are mutually exclusive,
 \begin{align}
 	\pr{A+B} = \pr{A} + \pr{B}.
 \label{eq:axiom_exclusive}
@@ -35,6 +35,7 @@ A^{\prime}B^{\prime} &=  \brak{A+B}^{\prime}
 \item If $A, B$ are independent,
 \begin{align}
 	\pr{AB} = \pr{A}\pr{B}
+\label{eq:axiom-ind}
 \end{align}
 \item 
 \begin{align}
