--- a/ncert/11/16/3/16/main.tex
+++ b/ncert/11/16/3/16/main.tex
@@ -1,7 +1,9 @@
  \begin{align} 
 	 \pr{E^\prime+ F^\prime}&= \pr{\brak{EF}^\prime}
 	 \\
-	 &=1-\pr{EF}\implies \pr{EF}=0.75 
+	 &=1-\pr{EF}
+	 \\
+	 \implies \pr{EF}&=0.75 
  \end{align}	
  $\because \pr{EF}\ne 0, E$ and $F$ are not mutually exclusive.
  
