--- a/axioms/axioms.tex
+++ b/axioms/axioms.tex
@@ -28,10 +28,10 @@
 \end{enumerate}
 \solution
 \input{ncert/11/16/3/15/main.tex}
-\item Events $E$ and $F$ are such that \pr{E^\prime +F^\prime} = 0.25, state whether $E$ and $F$ are mutually exclusive.\\
+\item Events $E$ and $F$ are such that P(not E or not F) = 0.25, state whether $E$ and $F$ are mutually exclusive.\\
 \solution
 \input{ncert/11/16/3/16/main.tex}
-	\item A and B are events such that $\pr A=0.42, \pr B=0.48$ and $\pr {\text{A and B}}=0.16$. \\
+	\item $A$ and $B$ are events such that $\pr A=0.42, \pr B=0.48$ and $\pr {A \text{ and } B}=0.16$. \\
 Determine 
 \begin{enumerate}
 \item $\pr{\text{not A}}$ 
@@ -128,6 +128,70 @@ If $\pr{A}>0$ and $\pr{B}>0$, then $A$ and $B$ can be mutually exclusive and ind
 \item If $A$ and $B$ are independent events, then $A'$ and $B'$ are also independent.\\
 \solution
 \input{exemplar/12/13/3/95/main.tex}
+\item If $A$ and $B$ are mutually exclusive events, $\pr{A}=0.35$ and $\pr{B}=0.45$ then find
+\begin{enumerate}
+\item $\pr{A'}$
+\item $\pr{B'}$
+\item $\pr{A+B}$
+\item $\pr{AB}$
+\item $\pr{AB'}$
+\item $\pr{A'B'}$
+\end{enumerate}
+%
+\solution 
+\input{exemplar/11/16/3/7/main.tex}
+%
+\item The accompanying Venn diagram shows three events, A, B, and C, and also the probabilities of the various intersections (for instance, $\pr{AB}=0.7$. Determine 
+	\begin{enumerate}
+		\item \pr{A}
+		\item \pr{BC'}
+		\item \pr{A+B}
+		\item \pr{AB'}
+		\item \pr{BC}
+		\item \text{Probability that exactly one of the three occurs}
+	\end{enumerate}
+	\begin{figure}[htb]
+		\centering
+		\input{exemplar/11/16/3/11/figs/fig.tex}
+		\caption {}
+		\label{fig:exemplar/11/16/3/11}
+	\end{figure}
+		\solution
+		\input{exemplar/11/16/3/11/main.tex}
+\item The probability of happening of an event $A$ is 0.5 and that of $B$ is 0.3. If $A$ and $B$ are mutually exclusive events, then the probability of neither $A$ nor $B$ is \underline{\phantom{Blank}}.
+	\\	
+\solution
+		\input{exemplar/11/16/3/41/main.tex}
+\item If $A$ and $B$ are mutually exclusive events,then
+\begin{enumerate}
+\item $\pr{A} \leq\pr{B^\prime}$
+\item $\pr{A} \geq \pr{B^\prime}$
+\item $\pr{A} < \pr{B^\prime}$
+\item $\text{none of these}$
+\end{enumerate}
+\solution 
+\input{exemplar/11/16/3/23/main.tex}
+\item The probability of an occurrence of event $A$ is .7 and that of the occurrence of event $B$ is .3 and the probability of occurrence of both is .4. Is this statement true or false?\\
+\solution
+\input{exemplar/11/16/3/35/main.tex}
+\item If \pr{A+B} = \pr{AB} for any two events $A$ and $B$ , then
+\begin{enumerate}
+\item $\pr{A}=\pr{B}$
+\item $\pr{A} > \pr{B}$
+\item $\pr{A} < \pr{B}$
+\item none of these
+\end{enumerate}
+\solution
+\input{exemplar/11/16/3/24/main.tex}
+\item If $A$ and $B$ are such that 
+$\Pr(A' \cup B') = \frac{2}{3}$ and $\Pr(A \cup B) = \frac{5}{9}$, 
+then $\Pr(A') + \Pr(B')$ = \\
+\solution
+\input{exemplar/12/13/3/105/main.tex}
+\item If $A$ and $B$ are independent, then 
+	$\pr{\text{exactly one of } A, B \text{ occurs}} =\pr{B}\pr{A^{\prime}}+\pr{A}\pr{B^{\prime}}$.\\
+\solution 
+\input{exemplar/12/13/3/65/main.tex}
 \item Given two independent events A and B such that $P(A) = 0.3$, $P(B) = 0.6$. Find
 		\label{ncert/12/13/2/10}
 \begin{enumerate}
