--- a/main.tex
+++ b/main.tex
@@ -71,11 +71,18 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \subsection{Formulae}
 \input{app/axioms.tex}
 \subsection{Examples}
-\input{ncert/axioms/axioms.tex}
-\subsection{Word Problems}
-\input{ncert/axioms/word.tex}
+\input{axioms/axioms.tex}
 \subsection{Conditional Probability}
-\input{exemplar/axioms.tex}
+\input{axioms/cond.tex}
+\section{Applications}
+\subsection{Axioms}
+\input{word/axioms.tex}
+\subsection{Conditional Probability}
+\input{word/cond.tex}
+\iffalse
+\subsection{Applications}
+\input{exemplar/cond/word.tex}
+\fi
 \section{Random Variables}
 \subsection{Examples}
 \input{ncert/defs.tex}
@@ -85,7 +92,7 @@ https://www.gnu.org/licenses/fdl-1.3.en.html
 \subsection{Examples}
 \input{ncert/cond.tex}
 \subsection{Exercises}
-\input{exemplar/cond.tex}
+\input{exemplar/cond/cond.tex}
 %\section{Discrete Distributions}
 \section{Bernoulli}
 \input{ncert/bernoulli.tex}
